commit translated contents

--- a/docs/visual-basic/misc/bc30620.md
+++ b/docs/visual-basic/misc/bc30620.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30620
 ms.assetid: 21939456-e36c-4886-8923-cc1fa0c26666
-ms.openlocfilehash: 6802a581d415e6d1a1b02974789cf778f8bbefd1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a1587257ed8bf0fb4a6bfcf19764dc138170d799
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646762"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401238"
 ---
 # <a name="option-strict-can-be-followed-only-by-on-or-off"></a>'Option Strict' può essere seguito solo da 'On' o 'Off'
 Le istruzioni`Option Strict` devono specificare `On` o `Off`. Tutti gli altri valori non sono validi.  
@@ -25,7 +25,7 @@ Le istruzioni`Option Strict` devono specificare `On` o `Off`. Tutti gli altri va
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Opzione \<parola chiave > istruzione](../../visual-basic/language-reference/statements/option-keyword-statement.md)
-- [Istruzione Option Compare](../../visual-basic/language-reference/statements/option-compare-statement.md)
-- [Istruzione Option Explicit](../../visual-basic/language-reference/statements/option-explicit-statement.md)
-- [Istruzione Option Strict](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [\<keyword>Istruzione Option](../language-reference/statements/option-keyword-statement.md)
+- [Istruzione Option Compare](../language-reference/statements/option-compare-statement.md)
+- [Istruzione Option Explicit](../language-reference/statements/option-explicit-statement.md)
+- [Option Strict Statement](../language-reference/statements/option-strict-statement.md)
