--- a/docs/visual-basic/misc/bc30796.md
+++ b/docs/visual-basic/misc/bc30796.md
@@ -1,5 +1,5 @@
 ---
-title: Nessuno dei metodi 'Main' accessibili con le firme appropriate trovati '<typename>' può essere il metodo di avvio dato che sono generici o annidati in tipi generici
+title: Nessuno dei metodi 'Main' accessibili con le firme appropriate trovate in '<typename>' può essere il metodo di avvio dato che sono generici o annidati in tipi generici
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30796
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30796
 ms.assetid: 606b3629-5a92-4c79-ace2-a530cab8c978
-ms.openlocfilehash: a1d106b9b2fd6050ccfd62c4140761082da05acd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 67d5d4058e9c744dac944a1a2751ceddf8169ce7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633257"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412364"
 ---
-# <a name="none-of-the-accessible-main-methods-with-the-appropriate-signatures-found-in-typename-can-be-the-startup-method-since-they-are-either-generic-or-nested-in-generic-types"></a>Nessuno dei metodi 'Main' accessibili con le firme appropriate trovati '\<nomeTipo >' può essere il metodo di avvio dato che sono generici o annidati in tipi generici
+# <a name="none-of-the-accessible-main-methods-with-the-appropriate-signatures-found-in-typename-can-be-the-startup-method-since-they-are-either-generic-or-nested-in-generic-types"></a>Nessuno dei metodi 'Main' accessibili con le firme appropriate trovate in '\<typename>' può essere il metodo di avvio dato che sono generici o annidati in tipi generici
 Una classe, un modulo o una struttura non comprende alcuna routine `Main` che abbia le caratteristiche della routine di avvio del progetto.  
   
  Visual Basic richiede che la routine di avvio di un progetto non dipenda da argomenti di tipo. Esso deve quindi poter accedere ad almeno una routine `Main` che non sia né generica né contenuta in alcun tipo generico.  
@@ -32,4 +32,4 @@ Una classe, un modulo o una struttura non comprende alcuna routine `Main` che ab
 ## <a name="see-also"></a>Vedere anche
 
 - [Gestione delle proprietà di progetti e soluzioni](/visualstudio/ide/managing-project-and-solution-properties)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
