--- a/docs/visual-basic/misc/bc31111.md
+++ b/docs/visual-basic/misc/bc31111.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31111
 ms.assetid: e02264f3-0645-4de5-b622-8a2a74496b64
-ms.openlocfilehash: 9da154981d593c5549cbf633e172d653ee4f4fab
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 0fb5d8d10b2fb02124efc60cc0b40007fb8c7829
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664616"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405716"
 ---
 # <a name="exit-addhandler-exit-removehandler-and-exit-raiseevent-are-not-valid"></a>'Exit AddHandler', 'Exit RemoveHandler' e 'Exit RaiseEvent' non sono validi
 'Exit AddHandler', 'Exit RemoveHandler' e 'Exit RaiseEvent' non sono validi. Usare 'Return' per uscire dai membri dell'evento.  
@@ -29,9 +29,9 @@ ms.locfileid: "69664616"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
 - [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
 - [RemoveHandler (istruzione)](../language-reference/statements/removehandler-statement.md)
 - [RaiseEvent-istruzione](../language-reference/statements/raiseevent-statement.md)
-- [Istruzione Return](../../visual-basic/language-reference/statements/return-statement.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [Return (istruzione)](../language-reference/statements/return-statement.md)
+- [Events](../programming-guide/language-features/events/index.md)
