--- a/docs/visual-basic/misc/bc30025.md
+++ b/docs/visual-basic/misc/bc30025.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30025
 ms.assetid: 00d7bd6d-e3d7-4a4b-9310-b611889be3e2
-ms.openlocfilehash: 36e5acac1cc51add954e4439e570533a4d2844ea
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 764159cd4f5c1b8967580af488594cb3def74585
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64609059"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366476"
 ---
 # <a name="property-missing-end-property"></a>Nella proprietà manca 'End Property'
 Un'istruzione `End` deve corrispondere al blocco che termina. Una definizione `Property` non è stata terminata correttamente.  
@@ -25,5 +25,5 @@ Un'istruzione `End` deve corrispondere al blocco che termina. Una definizione `P
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [Istruzione End](../../visual-basic/language-reference/statements/end-statement.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
+- [Istruzione End](../language-reference/statements/end-statement.md)
