--- a/docs/visual-basic/misc/bc30070.md
+++ b/docs/visual-basic/misc/bc30070.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile di controllo Next non corrisponde alla variabile di controllo ciclo For '<variablename>'
+title: La variabile di controllo Next non corrisponde alla variabile di controllo del ciclo for ' <variablename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30070
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30070
 ms.assetid: e9e96008-b053-4fa0-8966-decaad99fecd
-ms.openlocfilehash: 2f7fda907c0ec5dc413037e4407d6de4632a48eb
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: fa3f3c96ebc1ce89b55cbb5421b72497958160b4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936058"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381312"
 ---
-# <a name="next-control-variable-does-not-match-for-loop-control-variable-variablename"></a>Variabile di controllo Next non corrisponde alla variabile di controllo ciclo For '\<nomevariabile >'
+# <a name="next-control-variable-does-not-match-for-loop-control-variable-variablename"></a>La variabile di controllo Next non corrisponde alla variabile di controllo del ciclo for ' \<variablename> '
 La variabile di controllo nell'istruzione `Next` di un ciclo `For...Next` deve corrispondere alla variabile nell'istruzione `For` corrispondente.  
   
  **ID errore:** BC30070  
@@ -29,4 +29,4 @@ La variabile di controllo nell'istruzione `Next` di un ciclo `For...Next` deve c
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
