--- a/docs/visual-basic/misc/bc30084.md
+++ b/docs/visual-basic/misc/bc30084.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30084
 ms.assetid: 4c5e49c2-7343-4487-b5f8-a38c97ba895b
-ms.openlocfilehash: 59b3c0d28c12aa3689977288c81781d1ffc7ef33
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0b615d2dff6bad34be8e629beb99dac172fda4ae
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622284"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380549"
 ---
 # <a name="for-must-end-with-a-matching-next"></a>'For' deve terminare con un oggetto 'Next' corrispondente
 Un'istruzione `For` si verifica senza un'istruzione `Next` corrispondente. Deve essere usata un'istruzione `Next` per terminare il ciclo `For` .  
@@ -27,4 +27,4 @@ Un'istruzione `For` si verifica senza un'istruzione `Next` corrispondente. Deve 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
