--- a/docs/visual-basic/misc/bc30095.md
+++ b/docs/visual-basic/misc/bc30095.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30095
 ms.assetid: f0809aa5-e6c9-43c9-9664-4ff02825c3d8
-ms.openlocfilehash: 064783b145ad7f351cdd033cb47b4196ffc7b2f1
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 8770e1e8bfbdcaa1a1673862b962e5dbc626347e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935811"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370323"
 ---
 # <a name="select-case-must-end-with-a-matching-end-select"></a>'Select Case' deve terminare con un oggetto 'End Select' corrispondente
 Un'istruzione `Select` o `Select Case` si verifica senza un'istruzione `End Select` corrispondente. Deve essere usata un'istruzione `End Select` per terminare il blocco `Select` .  
@@ -27,4 +27,4 @@ Un'istruzione `Select` o `Select Case` si verifica senza un'istruzione `End Sele
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Select...Case](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [Istruzione Select...Case](../language-reference/statements/select-case-statement.md)
