--- a/docs/visual-basic/misc/bc30800.md
+++ b/docs/visual-basic/misc/bc30800.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30800
 ms.assetid: ecdec760-8b51-474f-acad-17cf8059d83b
-ms.openlocfilehash: 9abda8777f0cbc74475066f9db0c65ae0df88381
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 2f6471ad28ca12e93860d29ebcd1d1fb4db8d0a4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68513104"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412338"
 ---
 # <a name="method-arguments-must-be-enclosed-in-parentheses"></a>Gli argomenti del metodo devono essere racchiusi tra parentesi
 
@@ -30,4 +30,4 @@ Le regole relative alle chiamate di procedura sono più semplici nelle versioni 
 
 ## <a name="see-also"></a>Vedere anche
 
-- [Parametri e argomenti delle routine](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [Parametri e argomenti delle routine](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
