--- a/docs/visual-basic/misc/bc31157.md
+++ b/docs/visual-basic/misc/bc31157.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31157
 ms.assetid: d8d8769e-533d-454e-b145-99955ce45cc5
-ms.openlocfilehash: 1a42151083fd6232651d0847a964ba6ab32e6bbf
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 858b84b6846d5013caa29989f0223f99e62eb3d6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64648988"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408107"
 ---
 # <a name="xml-attribute-attribute1-must-appear-before-xml-attribute-attribute2"></a>L'attributo XML 'attribute1' deve essere specificato prima dell'attributo XML 'attribute2'
 Gli attributi in un valore letterale di documento XML sono specificati in un ordine non valido. L'ordine valido degli attributi per un valore letterale di documento XML è basato sulla specifica XML 1.0. Ad esempio, l'attributo `encoding` di un valore letterale di documento XML deve essere posto immediatamente dopo l'attributo `version` .  
@@ -25,7 +25,7 @@ Gli attributi in un valore letterale di documento XML sono specificati in un ord
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Valori letterali XML e specifica XML 1.0](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
-- [Valore letterale di documento XML](../../visual-basic/language-reference/xml-literals/xml-document-literal.md)
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Valori letterali XML e specifica XML 1.0](../programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
+- [Valore letterale di documento XML](../language-reference/xml-literals/xml-document-literal.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
