--- a/docs/visual-basic/misc/bc31400.md
+++ b/docs/visual-basic/misc/bc31400.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31400
 ms.assetid: 38b8adee-3593-40fb-b0a4-e2a47599567f
-ms.openlocfilehash: 110c9a849d2038dd1d22e308d749e1f73048f6b4
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 3ff024f855106762ed4f1b11a410496549b3cb49
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62050805"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407925"
 ---
 # <a name="local-variables-within-methods-of-structures-cannot-be-declared-static"></a>Le variabili locali all'interno di metodi di strutture non possono essere dichiarate come 'Static'
 Il modificatore `Static` non può essere usato con variabili locali nelle strutture.  
@@ -27,4 +27,4 @@ Il modificatore `Static` non può essere usato con variabili locali nelle strutt
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Static](../../visual-basic/language-reference/modifiers/static.md)
+- [Statico](../language-reference/modifiers/static.md)
