--- a/docs/visual-basic/misc/bc31410.md
+++ b/docs/visual-basic/misc/bc31410.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31410
 ms.assetid: 7d1831c2-837c-4b02-8492-d0fc038fe184
-ms.openlocfilehash: 3d2dbb28d2392d0d5566ae3f5c1736cda7b3a0a3
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2538267c4ffc79415328b0b074d88b639da44c8e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585113"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407795"
 ---
 # <a name="overloading-methods-declared-in-multiple-base-interfaces-is-not-valid"></a>L'overload dei metodi dichiarati in più interfacce di base non è valido
 Più interfacce ereditate eseguono implicitamente l'overload dello stesso metodo.  
@@ -25,5 +25,5 @@ Più interfacce ereditate eseguono implicitamente l'overload dello stesso metodo
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overload](../../visual-basic/language-reference/modifiers/overloads.md)
-- [Shadows](../../visual-basic/language-reference/modifiers/shadows.md)
+- [Overload](../language-reference/modifiers/overloads.md)
+- [Shadows](../language-reference/modifiers/shadows.md)
