--- a/docs/visual-basic/misc/bc33017.md
+++ b/docs/visual-basic/misc/bc33017.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC33017
 ms.assetid: 5972d955-ce1d-4348-a021-167eecb3a507
-ms.openlocfilehash: ed2bb904625e2f61e12fb9c8ac1309371525756d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9a715706cc945bdca31ddb6a3a42841661995af3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626712"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385151"
 ---
 # <a name="conversion-operators-must-be-declared-either-widening-or-narrowing"></a>Gli operatori di conversione devono essere dichiarati 'Widening' o 'Narrowing'
-[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) non specifica [Widening](../../visual-basic/language-reference/modifiers/widening.md) o [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md).  
+[Operator Statement](../language-reference/statements/operator-statement.md) non specifica [Widening](../language-reference/modifiers/widening.md) o [Narrowing](../language-reference/modifiers/narrowing.md).  
   
  Quando si definisce un operatore di conversione, è necessario dichiararlo come `Widening` o `Narrowing`. Queste caratteristiche si escludono a vicenda, quindi non è possibile specificarle entrambe.  
   
@@ -23,12 +23,12 @@ ms.locfileid: "64626712"
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Decidere se l'operatore di conversione deve essere `Widening` o `Narrowing`e includere la parola chiave appropriata nell'istruzione `Operator` . È necessario specificare una o l'altra.  
+- Decidere se l'operatore di conversione deve essere `Widening` o `Narrowing`e includere la parola chiave appropriata nell'istruzione `Operator` . È necessario specificare uno o l'altro.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Conversioni di ampliamento e restrizione](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
-- [Routine di operatore](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Widening and Narrowing Conversions](../programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [Routine di operatore](../programming-guide/language-features/procedures/operator-procedures.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
