commit bilingual contents

--- a/docs/visual-basic/misc/bc30620.md
+++ b/docs/visual-basic/misc/bc30620.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30620
 ms.assetid: 21939456-e36c-4886-8923-cc1fa0c26666
-ms.openlocfilehash: 6802a581d415e6d1a1b02974789cf778f8bbefd1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a1587257ed8bf0fb4a6bfcf19764dc138170d799
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646762"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401238"
 ---
-# <a name="option-strict-can-be-followed-only-by-on-or-off"></a><span data-ttu-id="0a42f-102">'Option Strict' può essere seguito solo da 'On' o 'Off'</span><span class="sxs-lookup"><span data-stu-id="0a42f-102">'Option Strict' can be followed only by 'On' or 'Off'</span></span>
-<span data-ttu-id="0a42f-103">Le istruzioni`Option Strict` devono specificare `On` o `Off`.</span><span class="sxs-lookup"><span data-stu-id="0a42f-103">`Option Strict` statements must specify either `On` or `Off`.</span></span> <span data-ttu-id="0a42f-104">Tutti gli altri valori non sono validi.</span><span class="sxs-lookup"><span data-stu-id="0a42f-104">All other values are invalid.</span></span>  
+# <a name="option-strict-can-be-followed-only-by-on-or-off"></a><span data-ttu-id="2cd5b-102">'Option Strict' può essere seguito solo da 'On' o 'Off'</span><span class="sxs-lookup"><span data-stu-id="2cd5b-102">'Option Strict' can be followed only by 'On' or 'Off'</span></span>
+<span data-ttu-id="2cd5b-103">Le istruzioni`Option Strict` devono specificare `On` o `Off`.</span><span class="sxs-lookup"><span data-stu-id="2cd5b-103">`Option Strict` statements must specify either `On` or `Off`.</span></span> <span data-ttu-id="2cd5b-104">Tutti gli altri valori non sono validi.</span><span class="sxs-lookup"><span data-stu-id="2cd5b-104">All other values are invalid.</span></span>  
   
- <span data-ttu-id="0a42f-105">**ID errore:** BC30620</span><span class="sxs-lookup"><span data-stu-id="0a42f-105">**Error ID:** BC30620</span></span>  
+ <span data-ttu-id="2cd5b-105">**ID errore:** BC30620</span><span class="sxs-lookup"><span data-stu-id="2cd5b-105">**Error ID:** BC30620</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="0a42f-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0a42f-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2cd5b-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2cd5b-106">To correct this error</span></span>  
   
-- <span data-ttu-id="0a42f-107">Specificare `On` o `Off` per l'istruzione `Option Strict` .</span><span class="sxs-lookup"><span data-stu-id="0a42f-107">Specify either `On` or `Off` for the `Option Strict` statement.</span></span>  
+- <span data-ttu-id="2cd5b-107">Specificare `On` o `Off` per l'istruzione `Option Strict` .</span><span class="sxs-lookup"><span data-stu-id="2cd5b-107">Specify either `On` or `Off` for the `Option Strict` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="0a42f-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0a42f-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2cd5b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2cd5b-108">See also</span></span>
 
-- [<span data-ttu-id="0a42f-109">Opzione \<parola chiave > istruzione</span><span class="sxs-lookup"><span data-stu-id="0a42f-109">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)
-- [<span data-ttu-id="0a42f-110">Istruzione Option Compare</span><span class="sxs-lookup"><span data-stu-id="0a42f-110">Option Compare Statement</span></span>](../../visual-basic/language-reference/statements/option-compare-statement.md)
-- [<span data-ttu-id="0a42f-111">Istruzione Option Explicit</span><span class="sxs-lookup"><span data-stu-id="0a42f-111">Option Explicit Statement</span></span>](../../visual-basic/language-reference/statements/option-explicit-statement.md)
-- [<span data-ttu-id="0a42f-112">Istruzione Option Strict</span><span class="sxs-lookup"><span data-stu-id="0a42f-112">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [<span data-ttu-id="2cd5b-109">\<keyword>Istruzione Option</span><span class="sxs-lookup"><span data-stu-id="2cd5b-109">Option \<keyword> Statement</span></span>](../language-reference/statements/option-keyword-statement.md)
+- [<span data-ttu-id="2cd5b-110">Istruzione Option Compare</span><span class="sxs-lookup"><span data-stu-id="2cd5b-110">Option Compare Statement</span></span>](../language-reference/statements/option-compare-statement.md)
+- [<span data-ttu-id="2cd5b-111">Istruzione Option Explicit</span><span class="sxs-lookup"><span data-stu-id="2cd5b-111">Option Explicit Statement</span></span>](../language-reference/statements/option-explicit-statement.md)
+- [<span data-ttu-id="2cd5b-112">Option Strict Statement</span><span class="sxs-lookup"><span data-stu-id="2cd5b-112">Option Strict Statement</span></span>](../language-reference/statements/option-strict-statement.md)
