--- a/docs/visual-basic/misc/bc31410.md
+++ b/docs/visual-basic/misc/bc31410.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31410
 ms.assetid: 7d1831c2-837c-4b02-8492-d0fc038fe184
-ms.openlocfilehash: 3d2dbb28d2392d0d5566ae3f5c1736cda7b3a0a3
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 2538267c4ffc79415328b0b074d88b639da44c8e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64585113"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407795"
 ---
-# <a name="overloading-methods-declared-in-multiple-base-interfaces-is-not-valid"></a><span data-ttu-id="70462-102">L'overload dei metodi dichiarati in più interfacce di base non è valido</span><span class="sxs-lookup"><span data-stu-id="70462-102">Overloading methods declared in multiple base interfaces is not valid</span></span>
-<span data-ttu-id="70462-103">Più interfacce ereditate eseguono implicitamente l'overload dello stesso metodo.</span><span class="sxs-lookup"><span data-stu-id="70462-103">Multiple inherited interfaces implicitly overload the same method.</span></span>  
+# <a name="overloading-methods-declared-in-multiple-base-interfaces-is-not-valid"></a><span data-ttu-id="9b62e-102">L'overload dei metodi dichiarati in più interfacce di base non è valido</span><span class="sxs-lookup"><span data-stu-id="9b62e-102">Overloading methods declared in multiple base interfaces is not valid</span></span>
+<span data-ttu-id="9b62e-103">Più interfacce ereditate eseguono implicitamente l'overload dello stesso metodo.</span><span class="sxs-lookup"><span data-stu-id="9b62e-103">Multiple inherited interfaces implicitly overload the same method.</span></span>  
   
- <span data-ttu-id="70462-104">**ID errore:** BC31410</span><span class="sxs-lookup"><span data-stu-id="70462-104">**Error ID:** BC31410</span></span>  
+ <span data-ttu-id="9b62e-104">**ID errore:** BC31410</span><span class="sxs-lookup"><span data-stu-id="9b62e-104">**Error ID:** BC31410</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="70462-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="70462-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="9b62e-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="9b62e-105">To correct this error</span></span>  
   
-- <span data-ttu-id="70462-106">Usare il modificatore `Shadows` invece di `Overloads` .</span><span class="sxs-lookup"><span data-stu-id="70462-106">Use the `Shadows` modifier instead of the `Overloads` modifier.</span></span>  
+- <span data-ttu-id="9b62e-106">Usare il modificatore `Shadows` invece di `Overloads` .</span><span class="sxs-lookup"><span data-stu-id="9b62e-106">Use the `Shadows` modifier instead of the `Overloads` modifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="70462-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="70462-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="9b62e-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="9b62e-107">See also</span></span>
 
-- [<span data-ttu-id="70462-108">Overload</span><span class="sxs-lookup"><span data-stu-id="70462-108">Overloads</span></span>](../../visual-basic/language-reference/modifiers/overloads.md)
-- [<span data-ttu-id="70462-109">Shadows</span><span class="sxs-lookup"><span data-stu-id="70462-109">Shadows</span></span>](../../visual-basic/language-reference/modifiers/shadows.md)
+- [<span data-ttu-id="9b62e-108">Overload</span><span class="sxs-lookup"><span data-stu-id="9b62e-108">Overloads</span></span>](../language-reference/modifiers/overloads.md)
+- [<span data-ttu-id="9b62e-109">Shadows</span><span class="sxs-lookup"><span data-stu-id="9b62e-109">Shadows</span></span>](../language-reference/modifiers/shadows.md)
