--- a/docs/visual-basic/misc/bc30025.md
+++ b/docs/visual-basic/misc/bc30025.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30025
 ms.assetid: 00d7bd6d-e3d7-4a4b-9310-b611889be3e2
-ms.openlocfilehash: 36e5acac1cc51add954e4439e570533a4d2844ea
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 764159cd4f5c1b8967580af488594cb3def74585
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64609059"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366476"
 ---
-# <a name="property-missing-end-property"></a><span data-ttu-id="d2526-102">Nella proprietà manca 'End Property'</span><span class="sxs-lookup"><span data-stu-id="d2526-102">Property missing 'End Property'</span></span>
-<span data-ttu-id="d2526-103">Un'istruzione `End` deve corrispondere al blocco che termina.</span><span class="sxs-lookup"><span data-stu-id="d2526-103">An `End` statement must match the block it terminates.</span></span> <span data-ttu-id="d2526-104">Una definizione `Property` non è stata terminata correttamente.</span><span class="sxs-lookup"><span data-stu-id="d2526-104">A `Property` definition has not been properly terminated.</span></span>  
+# <a name="property-missing-end-property"></a><span data-ttu-id="86154-102">Nella proprietà manca 'End Property'</span><span class="sxs-lookup"><span data-stu-id="86154-102">Property missing 'End Property'</span></span>
+<span data-ttu-id="86154-103">Un'istruzione `End` deve corrispondere al blocco che termina.</span><span class="sxs-lookup"><span data-stu-id="86154-103">An `End` statement must match the block it terminates.</span></span> <span data-ttu-id="86154-104">Una definizione `Property` non è stata terminata correttamente.</span><span class="sxs-lookup"><span data-stu-id="86154-104">A `Property` definition has not been properly terminated.</span></span>  
   
- <span data-ttu-id="d2526-105">**ID errore:** BC30025</span><span class="sxs-lookup"><span data-stu-id="d2526-105">**Error ID:** BC30025</span></span>  
+ <span data-ttu-id="86154-105">**ID errore:** BC30025</span><span class="sxs-lookup"><span data-stu-id="86154-105">**Error ID:** BC30025</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d2526-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d2526-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="86154-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="86154-106">To correct this error</span></span>  
   
-- <span data-ttu-id="d2526-107">Aggiungere un'istruzione `End Property` alla fine della definizione della proprietà.</span><span class="sxs-lookup"><span data-stu-id="d2526-107">Add an `End Property` statement to the end of the property definition.</span></span>  
+- <span data-ttu-id="86154-107">Aggiungere un'istruzione `End Property` alla fine della definizione della proprietà.</span><span class="sxs-lookup"><span data-stu-id="86154-107">Add an `End Property` statement to the end of the property definition.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d2526-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d2526-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="86154-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="86154-108">See also</span></span>
 
-- [<span data-ttu-id="d2526-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="d2526-109">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [<span data-ttu-id="d2526-110">Istruzione End</span><span class="sxs-lookup"><span data-stu-id="d2526-110">End Statement</span></span>](../../visual-basic/language-reference/statements/end-statement.md)
+- [<span data-ttu-id="86154-109">Routine Property</span><span class="sxs-lookup"><span data-stu-id="86154-109">Property Procedures</span></span>](../programming-guide/language-features/procedures/property-procedures.md)
+- [<span data-ttu-id="86154-110">Istruzione End</span><span class="sxs-lookup"><span data-stu-id="86154-110">End Statement</span></span>](../language-reference/statements/end-statement.md)
