--- a/docs/visual-basic/misc/bc30070.md
+++ b/docs/visual-basic/misc/bc30070.md
@@ -1,5 +1,5 @@
 ---
-title: Variabile di controllo Next non corrisponde alla variabile di controllo ciclo For '<variablename>'
+title: La variabile di controllo Next non corrisponde alla variabile di controllo del ciclo for ' <variablename> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30070
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30070
 ms.assetid: e9e96008-b053-4fa0-8966-decaad99fecd
-ms.openlocfilehash: 2f7fda907c0ec5dc413037e4407d6de4632a48eb
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: fa3f3c96ebc1ce89b55cbb5421b72497958160b4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936058"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84381312"
 ---
-# <a name="next-control-variable-does-not-match-for-loop-control-variable-variablename"></a><span data-ttu-id="330e5-102">Variabile di controllo Next non corrisponde alla variabile di controllo ciclo For '\<nomevariabile >'</span><span class="sxs-lookup"><span data-stu-id="330e5-102">Next control variable does not match For loop control variable '\<variablename>'</span></span>
-<span data-ttu-id="330e5-103">La variabile di controllo nell'istruzione `Next` di un ciclo `For...Next` deve corrispondere alla variabile nell'istruzione `For` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="330e5-103">The control variable in the `Next` statement of a `For...Next` loop must match the variable in the corresponding `For` statement.</span></span>  
+# <a name="next-control-variable-does-not-match-for-loop-control-variable-variablename"></a><span data-ttu-id="82507-102">La variabile di controllo Next non corrisponde alla variabile di controllo del ciclo for ' \<variablename> '</span><span class="sxs-lookup"><span data-stu-id="82507-102">Next control variable does not match For loop control variable '\<variablename>'</span></span>
+<span data-ttu-id="82507-103">La variabile di controllo nell'istruzione `Next` di un ciclo `For...Next` deve corrispondere alla variabile nell'istruzione `For` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="82507-103">The control variable in the `Next` statement of a `For...Next` loop must match the variable in the corresponding `For` statement.</span></span>  
   
- <span data-ttu-id="330e5-104">**ID errore:** BC30070</span><span class="sxs-lookup"><span data-stu-id="330e5-104">**Error ID:** BC30070</span></span>  
+ <span data-ttu-id="82507-104">**ID errore:** BC30070</span><span class="sxs-lookup"><span data-stu-id="82507-104">**Error ID:** BC30070</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="330e5-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="330e5-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="82507-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="82507-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="330e5-106">Controllare l'ortografia della variabile nell'istruzione `Next` e nell'istruzione `For` corrispondente per verificarne la corrispondenza.</span><span class="sxs-lookup"><span data-stu-id="330e5-106">Check the spelling of the variable in the `Next` statement and in the corresponding `For` statement to be sure it matches.</span></span>  
+1. <span data-ttu-id="82507-106">Controllare l'ortografia della variabile nell'istruzione `Next` e nell'istruzione `For` corrispondente per verificarne la corrispondenza.</span><span class="sxs-lookup"><span data-stu-id="82507-106">Check the spelling of the variable in the `Next` statement and in the corresponding `For` statement to be sure it matches.</span></span>  
   
-2. <span data-ttu-id="330e5-107">Verificare che nessuna parte del ciclo di inclusione sia stata eliminata inavvertitamente.</span><span class="sxs-lookup"><span data-stu-id="330e5-107">Ensure that no parts of the enclosing loop have been inadvertently deleted.</span></span>  
+2. <span data-ttu-id="82507-107">Verificare che nessuna parte del ciclo di inclusione sia stata eliminata inavvertitamente.</span><span class="sxs-lookup"><span data-stu-id="82507-107">Ensure that no parts of the enclosing loop have been inadvertently deleted.</span></span>  
   
-3. <span data-ttu-id="330e5-108">Se questo ciclo fa parte di un set di cicli annidati, verificare che ogni ciclo venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="330e5-108">If this loop is part of a set of nested loops, check that every loop is properly terminated.</span></span>  
+3. <span data-ttu-id="82507-108">Se questo ciclo fa parte di un set di cicli annidati, verificare che ogni ciclo venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="82507-108">If this loop is part of a set of nested loops, check that every loop is properly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="330e5-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="330e5-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="82507-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="82507-109">See also</span></span>
 
-- [<span data-ttu-id="330e5-110">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="330e5-110">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="82507-110">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="82507-110">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
