--- a/docs/visual-basic/misc/bc30084.md
+++ b/docs/visual-basic/misc/bc30084.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30084
 ms.assetid: 4c5e49c2-7343-4487-b5f8-a38c97ba895b
-ms.openlocfilehash: 59b3c0d28c12aa3689977288c81781d1ffc7ef33
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0b615d2dff6bad34be8e629beb99dac172fda4ae
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64622284"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380549"
 ---
-# <a name="for-must-end-with-a-matching-next"></a><span data-ttu-id="2482e-102">'For' deve terminare con un oggetto 'Next' corrispondente</span><span class="sxs-lookup"><span data-stu-id="2482e-102">'For' must end with a matching 'Next'</span></span>
-<span data-ttu-id="2482e-103">Un'istruzione `For` si verifica senza un'istruzione `Next` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="2482e-103">A `For` statement occurs without a corresponding `Next` statement.</span></span> <span data-ttu-id="2482e-104">Deve essere usata un'istruzione `Next` per terminare il ciclo `For` .</span><span class="sxs-lookup"><span data-stu-id="2482e-104">A `Next` statement must be used to end the `For` loop.</span></span>  
+# <a name="for-must-end-with-a-matching-next"></a><span data-ttu-id="b4b93-102">'For' deve terminare con un oggetto 'Next' corrispondente</span><span class="sxs-lookup"><span data-stu-id="b4b93-102">'For' must end with a matching 'Next'</span></span>
+<span data-ttu-id="b4b93-103">Un'istruzione `For` si verifica senza un'istruzione `Next` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="b4b93-103">A `For` statement occurs without a corresponding `Next` statement.</span></span> <span data-ttu-id="b4b93-104">Deve essere usata un'istruzione `Next` per terminare il ciclo `For` .</span><span class="sxs-lookup"><span data-stu-id="b4b93-104">A `Next` statement must be used to end the `For` loop.</span></span>  
   
- <span data-ttu-id="2482e-105">**ID errore:** BC30084</span><span class="sxs-lookup"><span data-stu-id="2482e-105">**Error ID:** BC30084</span></span>  
+ <span data-ttu-id="b4b93-105">**ID errore:** BC30084</span><span class="sxs-lookup"><span data-stu-id="b4b93-105">**Error ID:** BC30084</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2482e-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2482e-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b4b93-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b4b93-106">To correct this error</span></span>  
   
-- <span data-ttu-id="2482e-107">Se questo ciclo `For` fa parte di un set di cicli annidati, verificare che ogni ciclo venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="2482e-107">If this `For` loop is part of a set of nested loops, make sure each loop is properly terminated.</span></span>  
+- <span data-ttu-id="b4b93-107">Se questo ciclo `For` fa parte di un set di cicli annidati, verificare che ogni ciclo venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="b4b93-107">If this `For` loop is part of a set of nested loops, make sure each loop is properly terminated.</span></span>  
   
-- <span data-ttu-id="2482e-108">Aggiungere un'istruzione `Next` alla fine del ciclo `For` .</span><span class="sxs-lookup"><span data-stu-id="2482e-108">Add a `Next` statement to the end of the `For` loop.</span></span>  
+- <span data-ttu-id="b4b93-108">Aggiungere un'istruzione `Next` alla fine del ciclo `For` .</span><span class="sxs-lookup"><span data-stu-id="b4b93-108">Add a `Next` statement to the end of the `For` loop.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2482e-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2482e-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b4b93-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b4b93-109">See also</span></span>
 
-- [<span data-ttu-id="2482e-110">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="2482e-110">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="b4b93-110">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="b4b93-110">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
