--- a/docs/visual-basic/misc/bc30095.md
+++ b/docs/visual-basic/misc/bc30095.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30095
 ms.assetid: f0809aa5-e6c9-43c9-9664-4ff02825c3d8
-ms.openlocfilehash: 064783b145ad7f351cdd033cb47b4196ffc7b2f1
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 8770e1e8bfbdcaa1a1673862b962e5dbc626347e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61935811"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84370323"
 ---
-# <a name="select-case-must-end-with-a-matching-end-select"></a><span data-ttu-id="ee681-102">'Select Case' deve terminare con un oggetto 'End Select' corrispondente</span><span class="sxs-lookup"><span data-stu-id="ee681-102">'Select Case' must end with a matching 'End Select'</span></span>
-<span data-ttu-id="ee681-103">Un'istruzione `Select` o `Select Case` si verifica senza un'istruzione `End Select` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="ee681-103">A `Select` or `Select Case` statement occurs without a corresponding `End Select` statement.</span></span> <span data-ttu-id="ee681-104">Deve essere usata un'istruzione `End Select` per terminare il blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="ee681-104">An `End Select` statement must be used to end the `Select` block.</span></span>  
+# <a name="select-case-must-end-with-a-matching-end-select"></a><span data-ttu-id="0b27c-102">'Select Case' deve terminare con un oggetto 'End Select' corrispondente</span><span class="sxs-lookup"><span data-stu-id="0b27c-102">'Select Case' must end with a matching 'End Select'</span></span>
+<span data-ttu-id="0b27c-103">Un'istruzione `Select` o `Select Case` si verifica senza un'istruzione `End Select` corrispondente.</span><span class="sxs-lookup"><span data-stu-id="0b27c-103">A `Select` or `Select Case` statement occurs without a corresponding `End Select` statement.</span></span> <span data-ttu-id="0b27c-104">Deve essere usata un'istruzione `End Select` per terminare il blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="0b27c-104">An `End Select` statement must be used to end the `Select` block.</span></span>  
   
- <span data-ttu-id="ee681-105">**ID errore:** BC30095</span><span class="sxs-lookup"><span data-stu-id="ee681-105">**Error ID:** BC30095</span></span>  
+ <span data-ttu-id="0b27c-105">**ID errore:** BC30095</span><span class="sxs-lookup"><span data-stu-id="0b27c-105">**Error ID:** BC30095</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ee681-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ee681-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0b27c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0b27c-106">To correct this error</span></span>  
   
-1. <span data-ttu-id="ee681-107">Se questo blocco `Select` fa parte di un set di blocchi `Select` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="ee681-107">If this `Select` block is part of a set of nested `Select` blocks, make sure each block is properly terminated.</span></span>  
+1. <span data-ttu-id="0b27c-107">Se questo blocco `Select` fa parte di un set di blocchi `Select` annidati, verificare che ogni blocco venga terminato correttamente.</span><span class="sxs-lookup"><span data-stu-id="0b27c-107">If this `Select` block is part of a set of nested `Select` blocks, make sure each block is properly terminated.</span></span>  
   
-2. <span data-ttu-id="ee681-108">Aggiungere un'istruzione `End Select` alla fine del blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="ee681-108">Add an `End Select` statement to the end of the `Select` block.</span></span>  
+2. <span data-ttu-id="0b27c-108">Aggiungere un'istruzione `End Select` alla fine del blocco `Select` .</span><span class="sxs-lookup"><span data-stu-id="0b27c-108">Add an `End Select` statement to the end of the `Select` block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ee681-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ee681-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0b27c-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0b27c-109">See also</span></span>
 
-- [<span data-ttu-id="ee681-110">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="ee681-110">Select...Case Statement</span></span>](../../visual-basic/language-reference/statements/select-case-statement.md)
+- [<span data-ttu-id="0b27c-110">Istruzione Select...Case</span><span class="sxs-lookup"><span data-stu-id="0b27c-110">Select...Case Statement</span></span>](../language-reference/statements/select-case-statement.md)
