--- a/docs/visual-basic/misc/bc30641.md
+++ b/docs/visual-basic/misc/bc30641.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC30641
 ms.assetid: 6f9db6c3-7b88-407e-a258-a0a998ac5622
-ms.openlocfilehash: fe230f9ec72936c038cfc8d14c20e271a242083a
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 34a7a8b957c3a9df5c45b3e193a768ba3f661b9a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646555"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415115"
 ---
-# <a name="byval-and-byref-cannot-be-combined"></a><span data-ttu-id="4140a-102">'ByVal' e 'ByRef' non possono essere combinati</span><span class="sxs-lookup"><span data-stu-id="4140a-102">'ByVal' and 'ByRef' cannot be combined</span></span>
-<span data-ttu-id="4140a-103">Le parole chiave `ByVal` e `ByRef` si escludono reciprocamente.</span><span class="sxs-lookup"><span data-stu-id="4140a-103">The `ByVal` and `ByRef` keywords are mutually exclusive.</span></span>  
+# <a name="byval-and-byref-cannot-be-combined"></a><span data-ttu-id="b790d-102">'ByVal' e 'ByRef' non possono essere combinati</span><span class="sxs-lookup"><span data-stu-id="b790d-102">'ByVal' and 'ByRef' cannot be combined</span></span>
+<span data-ttu-id="b790d-103">Le parole chiave `ByVal` e `ByRef` si escludono reciprocamente.</span><span class="sxs-lookup"><span data-stu-id="b790d-103">The `ByVal` and `ByRef` keywords are mutually exclusive.</span></span>  
   
- <span data-ttu-id="4140a-104">**ID errore:** BC30641</span><span class="sxs-lookup"><span data-stu-id="4140a-104">**Error ID:** BC30641</span></span>  
+ <span data-ttu-id="b790d-104">**ID errore:** BC30641</span><span class="sxs-lookup"><span data-stu-id="b790d-104">**Error ID:** BC30641</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4140a-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4140a-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b790d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b790d-105">To correct this error</span></span>  
   
-- <span data-ttu-id="4140a-106">Specificare `ByVal` o `ByRef`, ma non entrambi.</span><span class="sxs-lookup"><span data-stu-id="4140a-106">Specify either `ByVal` or `ByRef`, but not both.</span></span>  
+- <span data-ttu-id="b790d-106">Specificare `ByVal` o `ByRef`, ma non entrambi.</span><span class="sxs-lookup"><span data-stu-id="b790d-106">Specify either `ByVal` or `ByRef`, but not both.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="4140a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4140a-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b790d-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b790d-107">See also</span></span>
 
-- [<span data-ttu-id="4140a-108">ByVal</span><span class="sxs-lookup"><span data-stu-id="4140a-108">ByVal</span></span>](../../visual-basic/language-reference/modifiers/byval.md)
-- [<span data-ttu-id="4140a-109">ByRef</span><span class="sxs-lookup"><span data-stu-id="4140a-109">ByRef</span></span>](../../visual-basic/language-reference/modifiers/byref.md)
+- [<span data-ttu-id="b790d-108">ByVal</span><span class="sxs-lookup"><span data-stu-id="b790d-108">ByVal</span></span>](../language-reference/modifiers/byval.md)
+- [<span data-ttu-id="b790d-109">ByRef</span><span class="sxs-lookup"><span data-stu-id="b790d-109">ByRef</span></span>](../language-reference/modifiers/byref.md)
