--- a/docs/visual-basic/misc/bc30796.md
+++ b/docs/visual-basic/misc/bc30796.md
@@ -1,5 +1,5 @@
 ---
-title: Nessuno dei metodi 'Main' accessibili con le firme appropriate trovati '<typename>' può essere il metodo di avvio dato che sono generici o annidati in tipi generici
+title: Nessuno dei metodi 'Main' accessibili con le firme appropriate trovate in '<typename>' può essere il metodo di avvio dato che sono generici o annidati in tipi generici
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30796
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC30796
 ms.assetid: 606b3629-5a92-4c79-ace2-a530cab8c978
-ms.openlocfilehash: a1d106b9b2fd6050ccfd62c4140761082da05acd
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 67d5d4058e9c744dac944a1a2751ceddf8169ce7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64633257"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412364"
 ---
-# <a name="none-of-the-accessible-main-methods-with-the-appropriate-signatures-found-in-typename-can-be-the-startup-method-since-they-are-either-generic-or-nested-in-generic-types"></a><span data-ttu-id="a49fa-102">Nessuno dei metodi 'Main' accessibili con le firme appropriate trovati '\<nomeTipo >' può essere il metodo di avvio dato che sono generici o annidati in tipi generici</span><span class="sxs-lookup"><span data-stu-id="a49fa-102">None of the accessible 'Main' methods with the appropriate signatures found in '\<typename>' can be the startup method since they are either generic or nested in generic types</span></span>
-<span data-ttu-id="a49fa-103">Una classe, un modulo o una struttura non comprende alcuna routine `Main` che abbia le caratteristiche della routine di avvio del progetto.</span><span class="sxs-lookup"><span data-stu-id="a49fa-103">A class, module, or structure does not have any `Main` procedure that qualifies as the project startup procedure.</span></span>  
+# <a name="none-of-the-accessible-main-methods-with-the-appropriate-signatures-found-in-typename-can-be-the-startup-method-since-they-are-either-generic-or-nested-in-generic-types"></a><span data-ttu-id="15cac-102">Nessuno dei metodi 'Main' accessibili con le firme appropriate trovate in '\<typename>' può essere il metodo di avvio dato che sono generici o annidati in tipi generici</span><span class="sxs-lookup"><span data-stu-id="15cac-102">None of the accessible 'Main' methods with the appropriate signatures found in '\<typename>' can be the startup method since they are either generic or nested in generic types</span></span>
+<span data-ttu-id="15cac-103">Una classe, un modulo o una struttura non comprende alcuna routine `Main` che abbia le caratteristiche della routine di avvio del progetto.</span><span class="sxs-lookup"><span data-stu-id="15cac-103">A class, module, or structure does not have any `Main` procedure that qualifies as the project startup procedure.</span></span>  
   
- <span data-ttu-id="a49fa-104">Visual Basic richiede che la routine di avvio di un progetto non dipenda da argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="a49fa-104">Visual Basic requires that the startup procedure for a project must not be dependent on type arguments.</span></span> <span data-ttu-id="a49fa-105">Esso deve quindi poter accedere ad almeno una routine `Main` che non sia né generica né contenuta in alcun tipo generico.</span><span class="sxs-lookup"><span data-stu-id="a49fa-105">Therefore, it must be able to access at least one `Main` procedure that is neither generic nor contained in any generic type.</span></span>  
+ <span data-ttu-id="15cac-104">Visual Basic richiede che la routine di avvio di un progetto non dipenda da argomenti di tipo.</span><span class="sxs-lookup"><span data-stu-id="15cac-104">Visual Basic requires that the startup procedure for a project must not be dependent on type arguments.</span></span> <span data-ttu-id="15cac-105">Esso deve quindi poter accedere ad almeno una routine `Main` che non sia né generica né contenuta in alcun tipo generico.</span><span class="sxs-lookup"><span data-stu-id="15cac-105">Therefore, it must be able to access at least one `Main` procedure that is neither generic nor contained in any generic type.</span></span>  
   
- <span data-ttu-id="a49fa-106">**ID errore:** BC30796</span><span class="sxs-lookup"><span data-stu-id="a49fa-106">**Error ID:** BC30796</span></span>  
+ <span data-ttu-id="15cac-106">**ID errore:** BC30796</span><span class="sxs-lookup"><span data-stu-id="15cac-106">**Error ID:** BC30796</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a49fa-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a49fa-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="15cac-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="15cac-107">To correct this error</span></span>  
   
-- <span data-ttu-id="a49fa-108">Definire almeno una delle routine `Main` in modo tale che non sia generica e non sia contenuta in un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="a49fa-108">Define at least one of the `Main` procedures so that it is not generic and is not contained in a generic type.</span></span>  
+- <span data-ttu-id="15cac-108">Definire almeno una delle routine `Main` in modo tale che non sia generica e non sia contenuta in un tipo generico.</span><span class="sxs-lookup"><span data-stu-id="15cac-108">Define at least one of the `Main` procedures so that it is not generic and is not contained in a generic type.</span></span>  
   
-     <span data-ttu-id="a49fa-109">-oppure-</span><span class="sxs-lookup"><span data-stu-id="a49fa-109">-or-</span></span>  
+     <span data-ttu-id="15cac-109">-oppure-</span><span class="sxs-lookup"><span data-stu-id="15cac-109">-or-</span></span>  
   
-- <span data-ttu-id="a49fa-110">Nella pagina **Proprietà** del progetto, specificare un form o un modulo diverso per **Form di avvio** o **Oggetto di avvio**.</span><span class="sxs-lookup"><span data-stu-id="a49fa-110">On the **Properties** page for your project, specify a different form or module for the **Startup form** or **Startup object**.</span></span>  
+- <span data-ttu-id="15cac-110">Nella pagina **Proprietà** del progetto, specificare un form o un modulo diverso per **Form di avvio** o **Oggetto di avvio**.</span><span class="sxs-lookup"><span data-stu-id="15cac-110">On the **Properties** page for your project, specify a different form or module for the **Startup form** or **Startup object**.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a49fa-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a49fa-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="15cac-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="15cac-111">See also</span></span>
 
-- [<span data-ttu-id="a49fa-112">Gestione delle proprietà di progetti e soluzioni</span><span class="sxs-lookup"><span data-stu-id="a49fa-112">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)
-- [<span data-ttu-id="a49fa-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a49fa-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [<span data-ttu-id="15cac-112">Gestione delle proprietà di progetti e soluzioni</span><span class="sxs-lookup"><span data-stu-id="15cac-112">Managing Project and Solution Properties</span></span>](/visualstudio/ide/managing-project-and-solution-properties)
+- [<span data-ttu-id="15cac-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="15cac-113">Generic Types in Visual Basic</span></span>](../programming-guide/language-features/data-types/generic-types.md)
