--- a/docs/visual-basic/misc/bc30800.md
+++ b/docs/visual-basic/misc/bc30800.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC30800
 ms.assetid: ecdec760-8b51-474f-acad-17cf8059d83b
-ms.openlocfilehash: 9abda8777f0cbc74475066f9db0c65ae0df88381
-ms.sourcegitcommit: 463f3f050cecc0b6403e67f19a61f870fb8e7b7d
+ms.openlocfilehash: 2f6471ad28ca12e93860d29ebcd1d1fb4db8d0a4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/26/2019
-ms.locfileid: "68513104"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412338"
 ---
-# <a name="method-arguments-must-be-enclosed-in-parentheses"></a><span data-ttu-id="af4e0-102">Gli argomenti del metodo devono essere racchiusi tra parentesi</span><span class="sxs-lookup"><span data-stu-id="af4e0-102">Method arguments must be enclosed in parentheses</span></span>
+# <a name="method-arguments-must-be-enclosed-in-parentheses"></a><span data-ttu-id="0aca9-102">Gli argomenti del metodo devono essere racchiusi tra parentesi</span><span class="sxs-lookup"><span data-stu-id="0aca9-102">Method arguments must be enclosed in parentheses</span></span>
 
-<span data-ttu-id="af4e0-103">Le regole relative alle chiamate di procedura sono più semplici nelle versioni più recenti di Visual Basic.</span><span class="sxs-lookup"><span data-stu-id="af4e0-103">The rules governing procedure calls are simpler in newer versions of Visual Basic.</span></span> <span data-ttu-id="af4e0-104">Tutti gli argomenti devono essere racchiusi tra parentesi.</span><span class="sxs-lookup"><span data-stu-id="af4e0-104">All arguments must be enclosed by parentheses.</span></span>
+<span data-ttu-id="0aca9-103">Le regole relative alle chiamate di procedura sono più semplici nelle versioni più recenti di Visual Basic.</span><span class="sxs-lookup"><span data-stu-id="0aca9-103">The rules governing procedure calls are simpler in newer versions of Visual Basic.</span></span> <span data-ttu-id="0aca9-104">Tutti gli argomenti devono essere racchiusi tra parentesi.</span><span class="sxs-lookup"><span data-stu-id="0aca9-104">All arguments must be enclosed by parentheses.</span></span>
 
-<span data-ttu-id="af4e0-105">**ID errore:** BC30800</span><span class="sxs-lookup"><span data-stu-id="af4e0-105">**Error ID:** BC30800</span></span>
+<span data-ttu-id="0aca9-105">**ID errore:** BC30800</span><span class="sxs-lookup"><span data-stu-id="0aca9-105">**Error ID:** BC30800</span></span>
 
-## <a name="to-correct-this-error"></a><span data-ttu-id="af4e0-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="af4e0-106">To correct this error</span></span>
+## <a name="to-correct-this-error"></a><span data-ttu-id="0aca9-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="0aca9-106">To correct this error</span></span>
 
-- <span data-ttu-id="af4e0-107">Racchiudere l'elenco di argomenti tra parentesi, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="af4e0-107">Enclose the argument list in parentheses; for example:</span></span>
+- <span data-ttu-id="0aca9-107">Racchiudere l'elenco di argomenti tra parentesi, ad esempio:</span><span class="sxs-lookup"><span data-stu-id="0aca9-107">Enclose the argument list in parentheses; for example:</span></span>
 
   ```vb
   MySub(ArrayIndex, NewValue)
   ```
 
-## <a name="see-also"></a><span data-ttu-id="af4e0-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="af4e0-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="0aca9-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="0aca9-108">See also</span></span>
 
-- [<span data-ttu-id="af4e0-109">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="af4e0-109">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+- [<span data-ttu-id="0aca9-109">Parametri e argomenti delle routine</span><span class="sxs-lookup"><span data-stu-id="0aca9-109">Procedure Parameters and Arguments</span></span>](../programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
