--- a/docs/visual-basic/misc/bc31111.md
+++ b/docs/visual-basic/misc/bc31111.md
@@ -7,31 +7,31 @@ f1_keywords:
 helpviewer_keywords:
 - BC31111
 ms.assetid: e02264f3-0645-4de5-b622-8a2a74496b64
-ms.openlocfilehash: 9da154981d593c5549cbf633e172d653ee4f4fab
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 0fb5d8d10b2fb02124efc60cc0b40007fb8c7829
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664616"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405716"
 ---
-# <a name="exit-addhandler-exit-removehandler-and-exit-raiseevent-are-not-valid"></a><span data-ttu-id="d068e-102">'Exit AddHandler', 'Exit RemoveHandler' e 'Exit RaiseEvent' non sono validi</span><span class="sxs-lookup"><span data-stu-id="d068e-102">'Exit AddHandler', 'Exit RemoveHandler' and 'Exit RaiseEvent' are not valid</span></span>
-<span data-ttu-id="d068e-103">'Exit AddHandler', 'Exit RemoveHandler' e 'Exit RaiseEvent' non sono validi.</span><span class="sxs-lookup"><span data-stu-id="d068e-103">'Exit AddHandler', 'Exit RemoveHandler' and 'Exit RaiseEvent' are not valid.</span></span> <span data-ttu-id="d068e-104">Usare 'Return' per uscire dai membri dell'evento.</span><span class="sxs-lookup"><span data-stu-id="d068e-104">Use 'Return' to exit from event members.</span></span>  
+# <a name="exit-addhandler-exit-removehandler-and-exit-raiseevent-are-not-valid"></a><span data-ttu-id="06e83-102">'Exit AddHandler', 'Exit RemoveHandler' e 'Exit RaiseEvent' non sono validi</span><span class="sxs-lookup"><span data-stu-id="06e83-102">'Exit AddHandler', 'Exit RemoveHandler' and 'Exit RaiseEvent' are not valid</span></span>
+<span data-ttu-id="06e83-103">'Exit AddHandler', 'Exit RemoveHandler' e 'Exit RaiseEvent' non sono validi.</span><span class="sxs-lookup"><span data-stu-id="06e83-103">'Exit AddHandler', 'Exit RemoveHandler' and 'Exit RaiseEvent' are not valid.</span></span> <span data-ttu-id="06e83-104">Usare 'Return' per uscire dai membri dell'evento.</span><span class="sxs-lookup"><span data-stu-id="06e83-104">Use 'Return' to exit from event members.</span></span>  
   
- <span data-ttu-id="d068e-105">L'istruzione `Exit` non può essere usata per uscire dai metodi `AddHandler`, `RemoveHandler`o `RaiseEvent` in una dichiarazione `Custom Event` .</span><span class="sxs-lookup"><span data-stu-id="d068e-105">The `Exit` statement cannot be used to exit `AddHandler`, `RemoveHandler`, or `RaiseEvent` methods in a `Custom Event` declaration.</span></span> <span data-ttu-id="d068e-106">Per uscire dal metodo, usare l'istruzione `Return` , senza specificare un'espressione restituita.</span><span class="sxs-lookup"><span data-stu-id="d068e-106">Instead, use the `Return` statement, without specifying a return expression, to exit the method.</span></span>  
+ <span data-ttu-id="06e83-105">L'istruzione `Exit` non può essere usata per uscire dai metodi `AddHandler`, `RemoveHandler`o `RaiseEvent` in una dichiarazione `Custom Event` .</span><span class="sxs-lookup"><span data-stu-id="06e83-105">The `Exit` statement cannot be used to exit `AddHandler`, `RemoveHandler`, or `RaiseEvent` methods in a `Custom Event` declaration.</span></span> <span data-ttu-id="06e83-106">Per uscire dal metodo, usare l'istruzione `Return` , senza specificare un'espressione restituita.</span><span class="sxs-lookup"><span data-stu-id="06e83-106">Instead, use the `Return` statement, without specifying a return expression, to exit the method.</span></span>  
   
- <span data-ttu-id="d068e-107">**ID errore:** BC31111</span><span class="sxs-lookup"><span data-stu-id="d068e-107">**Error ID:** BC31111</span></span>  
+ <span data-ttu-id="06e83-107">**ID errore:** BC31111</span><span class="sxs-lookup"><span data-stu-id="06e83-107">**Error ID:** BC31111</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="d068e-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d068e-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="06e83-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="06e83-108">To correct this error</span></span>  
   
-- <span data-ttu-id="d068e-109">Sostituire l'istruzione `Exit` con un'istruzione `Return` .</span><span class="sxs-lookup"><span data-stu-id="d068e-109">Replace the `Exit` statement with a `Return` statement.</span></span>  
+- <span data-ttu-id="06e83-109">Sostituire l'istruzione `Exit` con un'istruzione `Return` .</span><span class="sxs-lookup"><span data-stu-id="06e83-109">Replace the `Exit` statement with a `Return` statement.</span></span>  
   
-     <span data-ttu-id="d068e-110">Verificare che l'istruzione `Return` non specifichi un'espressione restituita.</span><span class="sxs-lookup"><span data-stu-id="d068e-110">Make sure the `Return` statement does not specify a return expression.</span></span>  
+     <span data-ttu-id="06e83-110">Verificare che l'istruzione `Return` non specifichi un'espressione restituita.</span><span class="sxs-lookup"><span data-stu-id="06e83-110">Make sure the `Return` statement does not specify a return expression.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="d068e-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d068e-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="06e83-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="06e83-111">See also</span></span>
 
-- [<span data-ttu-id="d068e-112">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="d068e-112">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="d068e-113">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="d068e-113">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
-- [<span data-ttu-id="d068e-114">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="d068e-114">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
-- [<span data-ttu-id="d068e-115">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="d068e-115">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
-- [<span data-ttu-id="d068e-116">Istruzione Return</span><span class="sxs-lookup"><span data-stu-id="d068e-116">Return Statement</span></span>](../../visual-basic/language-reference/statements/return-statement.md)
-- [<span data-ttu-id="d068e-117">Eventi</span><span class="sxs-lookup"><span data-stu-id="d068e-117">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+- [<span data-ttu-id="06e83-112">Istruzione Event</span><span class="sxs-lookup"><span data-stu-id="06e83-112">Event Statement</span></span>](../language-reference/statements/event-statement.md)
+- [<span data-ttu-id="06e83-113">Istruzione AddHandler</span><span class="sxs-lookup"><span data-stu-id="06e83-113">AddHandler statement</span></span>](../language-reference/statements/addhandler-statement.md)
+- [<span data-ttu-id="06e83-114">RemoveHandler (istruzione)</span><span class="sxs-lookup"><span data-stu-id="06e83-114">RemoveHandler statement</span></span>](../language-reference/statements/removehandler-statement.md)
+- [<span data-ttu-id="06e83-115">RaiseEvent-istruzione</span><span class="sxs-lookup"><span data-stu-id="06e83-115">RaiseEvent statement</span></span>](../language-reference/statements/raiseevent-statement.md)
+- [<span data-ttu-id="06e83-116">Return (istruzione)</span><span class="sxs-lookup"><span data-stu-id="06e83-116">Return Statement</span></span>](../language-reference/statements/return-statement.md)
+- [<span data-ttu-id="06e83-117">Events</span><span class="sxs-lookup"><span data-stu-id="06e83-117">Events</span></span>](../programming-guide/language-features/events/index.md)
