--- a/docs/visual-basic/misc/bc31157.md
+++ b/docs/visual-basic/misc/bc31157.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC31157
 ms.assetid: d8d8769e-533d-454e-b145-99955ce45cc5
-ms.openlocfilehash: 1a42151083fd6232651d0847a964ba6ab32e6bbf
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 858b84b6846d5013caa29989f0223f99e62eb3d6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64648988"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84408107"
 ---
-# <a name="xml-attribute-attribute1-must-appear-before-xml-attribute-attribute2"></a><span data-ttu-id="e9113-102">L'attributo XML 'attribute1' deve essere specificato prima dell'attributo XML 'attribute2'</span><span class="sxs-lookup"><span data-stu-id="e9113-102">XML attribute 'attribute1' must appear before XML attribute 'attribute2'</span></span>
-<span data-ttu-id="e9113-103">Gli attributi in un valore letterale di documento XML sono specificati in un ordine non valido.</span><span class="sxs-lookup"><span data-stu-id="e9113-103">Attributes in an XML document literal are specified in an invalid order.</span></span> <span data-ttu-id="e9113-104">L'ordine valido degli attributi per un valore letterale di documento XML è basato sulla specifica XML 1.0.</span><span class="sxs-lookup"><span data-stu-id="e9113-104">Valid attribute order for an XML document literal is based on the XML 1.0 specification.</span></span> <span data-ttu-id="e9113-105">Ad esempio, l'attributo `encoding` di un valore letterale di documento XML deve essere posto immediatamente dopo l'attributo `version` .</span><span class="sxs-lookup"><span data-stu-id="e9113-105">For example, the `encoding` attribute of an XML document literal must immediately follow the `version` attribute.</span></span>  
+# <a name="xml-attribute-attribute1-must-appear-before-xml-attribute-attribute2"></a><span data-ttu-id="99191-102">L'attributo XML 'attribute1' deve essere specificato prima dell'attributo XML 'attribute2'</span><span class="sxs-lookup"><span data-stu-id="99191-102">XML attribute 'attribute1' must appear before XML attribute 'attribute2'</span></span>
+<span data-ttu-id="99191-103">Gli attributi in un valore letterale di documento XML sono specificati in un ordine non valido.</span><span class="sxs-lookup"><span data-stu-id="99191-103">Attributes in an XML document literal are specified in an invalid order.</span></span> <span data-ttu-id="99191-104">L'ordine valido degli attributi per un valore letterale di documento XML è basato sulla specifica XML 1.0.</span><span class="sxs-lookup"><span data-stu-id="99191-104">Valid attribute order for an XML document literal is based on the XML 1.0 specification.</span></span> <span data-ttu-id="99191-105">Ad esempio, l'attributo `encoding` di un valore letterale di documento XML deve essere posto immediatamente dopo l'attributo `version` .</span><span class="sxs-lookup"><span data-stu-id="99191-105">For example, the `encoding` attribute of an XML document literal must immediately follow the `version` attribute.</span></span>  
   
- <span data-ttu-id="e9113-106">**ID errore:** BC31157</span><span class="sxs-lookup"><span data-stu-id="e9113-106">**Error ID:** BC31157</span></span>  
+ <span data-ttu-id="99191-106">**ID errore:** BC31157</span><span class="sxs-lookup"><span data-stu-id="99191-106">**Error ID:** BC31157</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e9113-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e9113-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="99191-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="99191-107">To correct this error</span></span>  
   
-- <span data-ttu-id="e9113-108">Aggiornare l'ordine degli attributi per il valore letterale di documento XML usando le linee guida indicate nella specifica XML 1.0.</span><span class="sxs-lookup"><span data-stu-id="e9113-108">Update the attribute order for the XML document literal by using the guidelines specified in the XML 1.0 specification.</span></span>  
+- <span data-ttu-id="99191-108">Aggiornare l'ordine degli attributi per il valore letterale di documento XML usando le linee guida indicate nella specifica XML 1.0.</span><span class="sxs-lookup"><span data-stu-id="99191-108">Update the attribute order for the XML document literal by using the guidelines specified in the XML 1.0 specification.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e9113-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e9113-109">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="99191-109">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="99191-109">See also</span></span>
 
-- [<span data-ttu-id="e9113-110">Valori letterali XML e specifica XML 1.0</span><span class="sxs-lookup"><span data-stu-id="e9113-110">XML Literals and the XML 1.0 Specification</span></span>](../../visual-basic/programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
-- [<span data-ttu-id="e9113-111">Valore letterale di documento XML</span><span class="sxs-lookup"><span data-stu-id="e9113-111">XML Document Literal</span></span>](../../visual-basic/language-reference/xml-literals/xml-document-literal.md)
-- [<span data-ttu-id="e9113-112">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="e9113-112">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)
-- [<span data-ttu-id="e9113-113">XML</span><span class="sxs-lookup"><span data-stu-id="e9113-113">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [<span data-ttu-id="99191-110">Valori letterali XML e specifica XML 1.0</span><span class="sxs-lookup"><span data-stu-id="99191-110">XML Literals and the XML 1.0 Specification</span></span>](../programming-guide/language-features/xml/xml-literals-and-the-xml-1-0-specification.md)
+- [<span data-ttu-id="99191-111">Valore letterale di documento XML</span><span class="sxs-lookup"><span data-stu-id="99191-111">XML Document Literal</span></span>](../language-reference/xml-literals/xml-document-literal.md)
+- [<span data-ttu-id="99191-112">Valori letterali XML</span><span class="sxs-lookup"><span data-stu-id="99191-112">XML Literals</span></span>](../language-reference/xml-literals/index.md)
+- [<span data-ttu-id="99191-113">XML</span><span class="sxs-lookup"><span data-stu-id="99191-113">XML</span></span>](../programming-guide/language-features/xml/index.md)
