--- a/docs/visual-basic/misc/bc31400.md
+++ b/docs/visual-basic/misc/bc31400.md
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC31400
 ms.assetid: 38b8adee-3593-40fb-b0a4-e2a47599567f
-ms.openlocfilehash: 110c9a849d2038dd1d22e308d749e1f73048f6b4
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 3ff024f855106762ed4f1b11a410496549b3cb49
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "62050805"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84407925"
 ---
-# <a name="local-variables-within-methods-of-structures-cannot-be-declared-static"></a><span data-ttu-id="3419b-102">Le variabili locali all'interno di metodi di strutture non possono essere dichiarate come 'Static'</span><span class="sxs-lookup"><span data-stu-id="3419b-102">Local variables within methods of structures cannot be declared 'Static'</span></span>
-<span data-ttu-id="3419b-103">Il modificatore `Static` non può essere usato con variabili locali nelle strutture.</span><span class="sxs-lookup"><span data-stu-id="3419b-103">The `Static` modifier cannot be used with local variables in structures.</span></span>  
+# <a name="local-variables-within-methods-of-structures-cannot-be-declared-static"></a><span data-ttu-id="c3e12-102">Le variabili locali all'interno di metodi di strutture non possono essere dichiarate come 'Static'</span><span class="sxs-lookup"><span data-stu-id="c3e12-102">Local variables within methods of structures cannot be declared 'Static'</span></span>
+<span data-ttu-id="c3e12-103">Il modificatore `Static` non può essere usato con variabili locali nelle strutture.</span><span class="sxs-lookup"><span data-stu-id="c3e12-103">The `Static` modifier cannot be used with local variables in structures.</span></span>  
   
- <span data-ttu-id="3419b-104">**ID errore:** BC31400</span><span class="sxs-lookup"><span data-stu-id="3419b-104">**Error ID:** BC31400</span></span>  
+ <span data-ttu-id="c3e12-104">**ID errore:** BC31400</span><span class="sxs-lookup"><span data-stu-id="c3e12-104">**Error ID:** BC31400</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3419b-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="3419b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="c3e12-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c3e12-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="3419b-106">Rimuovere il modificatore `Static` dalla variabile locale.</span><span class="sxs-lookup"><span data-stu-id="3419b-106">Remove the `Static` modifier from the local variable.</span></span>  
+1. <span data-ttu-id="c3e12-106">Rimuovere il modificatore `Static` dalla variabile locale.</span><span class="sxs-lookup"><span data-stu-id="c3e12-106">Remove the `Static` modifier from the local variable.</span></span>  
   
-2. <span data-ttu-id="3419b-107">Dichiarare la variabile come variabile statica con un ambito più ampio.</span><span class="sxs-lookup"><span data-stu-id="3419b-107">Declare the variable as a static variable with broader scope.</span></span>  
+2. <span data-ttu-id="c3e12-107">Dichiarare la variabile come variabile statica con un ambito più ampio.</span><span class="sxs-lookup"><span data-stu-id="c3e12-107">Declare the variable as a static variable with broader scope.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3419b-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="3419b-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="c3e12-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c3e12-108">See also</span></span>
 
-- [<span data-ttu-id="3419b-109">Static</span><span class="sxs-lookup"><span data-stu-id="3419b-109">Static</span></span>](../../visual-basic/language-reference/modifiers/static.md)
+- [<span data-ttu-id="c3e12-109">Statico</span><span class="sxs-lookup"><span data-stu-id="c3e12-109">Static</span></span>](../language-reference/modifiers/static.md)
