--- a/docs/visual-basic/misc/bc32510.md
+++ b/docs/visual-basic/misc/bc32510.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32510
 ms.assetid: e2eec233-6e0b-4f2f-a801-b0274e579c0e
-ms.openlocfilehash: 11c7887d73fb1d1f0de40cf17c2734e6558ef25b
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: bcd099fa729d36c1c8b3d7fd805f005f2efcf69d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352166"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385613"
 ---
-# <a name="attribute-systemruntimeinteropservicesdefaultcharsetattribute-is-not-supported-in-this-version"></a><span data-ttu-id="a847b-102">L'attributo 'System.Runtime.InteropServices.DefaultCharSetAttribute' non è supportato in questa versione</span><span class="sxs-lookup"><span data-stu-id="a847b-102">Attribute 'System.Runtime.InteropServices.DefaultCharSetAttribute' is not supported in this version</span></span>
-<span data-ttu-id="a847b-103">L'attributo <xref:System.Runtime.InteropServices.DefaultCharSetAttribute?displayProperty=nameWithType> consente di specificare il set di caratteri da usare nelle stringhe sottoposte a marshalling.</span><span class="sxs-lookup"><span data-stu-id="a847b-103">The <xref:System.Runtime.InteropServices.DefaultCharSetAttribute?displayProperty=nameWithType> attribute allows you to specify the character set to be used in marshaled strings.</span></span> <span data-ttu-id="a847b-104">Il suo valore accetta un membro dell'enumerazione <xref:System.Runtime.InteropServices.CharSet?displayProperty=nameWithType> .</span><span class="sxs-lookup"><span data-stu-id="a847b-104">Its value takes a member of the <xref:System.Runtime.InteropServices.CharSet?displayProperty=nameWithType> enumeration.</span></span>  
+# <a name="attribute-systemruntimeinteropservicesdefaultcharsetattribute-is-not-supported-in-this-version"></a><span data-ttu-id="26e49-102">L'attributo 'System.Runtime.InteropServices.DefaultCharSetAttribute' non è supportato in questa versione</span><span class="sxs-lookup"><span data-stu-id="26e49-102">Attribute 'System.Runtime.InteropServices.DefaultCharSetAttribute' is not supported in this version</span></span>
+<span data-ttu-id="26e49-103">L'attributo <xref:System.Runtime.InteropServices.DefaultCharSetAttribute?displayProperty=nameWithType> consente di specificare il set di caratteri da usare nelle stringhe sottoposte a marshalling.</span><span class="sxs-lookup"><span data-stu-id="26e49-103">The <xref:System.Runtime.InteropServices.DefaultCharSetAttribute?displayProperty=nameWithType> attribute allows you to specify the character set to be used in marshaled strings.</span></span> <span data-ttu-id="26e49-104">Il suo valore accetta un membro dell'enumerazione <xref:System.Runtime.InteropServices.CharSet?displayProperty=nameWithType> .</span><span class="sxs-lookup"><span data-stu-id="26e49-104">Its value takes a member of the <xref:System.Runtime.InteropServices.CharSet?displayProperty=nameWithType> enumeration.</span></span>  
   
- <span data-ttu-id="a847b-105">La versione corrente di Visual Basic non supporta questo attributo.</span><span class="sxs-lookup"><span data-stu-id="a847b-105">The current version of Visual Basic does not support this attribute.</span></span> <span data-ttu-id="a847b-106">È possibile che venga supportato nelle versioni future.</span><span class="sxs-lookup"><span data-stu-id="a847b-106">Support is possible in future versions.</span></span>  
+ <span data-ttu-id="26e49-105">La versione corrente di Visual Basic non supporta questo attributo.</span><span class="sxs-lookup"><span data-stu-id="26e49-105">The current version of Visual Basic does not support this attribute.</span></span> <span data-ttu-id="26e49-106">È possibile che venga supportato nelle versioni future.</span><span class="sxs-lookup"><span data-stu-id="26e49-106">Support is possible in future versions.</span></span>  
   
- <span data-ttu-id="a847b-107">**ID errore:** BC32510</span><span class="sxs-lookup"><span data-stu-id="a847b-107">**Error ID:** BC32510</span></span>  
+ <span data-ttu-id="26e49-107">**ID errore:** BC32510</span><span class="sxs-lookup"><span data-stu-id="26e49-107">**Error ID:** BC32510</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a847b-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a847b-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="26e49-108">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="26e49-108">To correct this error</span></span>  
   
-- <span data-ttu-id="a847b-109">Usare ogni [Declare Statement](../../visual-basic/language-reference/statements/declare-statement.md) per specificare il set di caratteri per la routine esterna che dichiara.</span><span class="sxs-lookup"><span data-stu-id="a847b-109">Use each [Declare Statement](../../visual-basic/language-reference/statements/declare-statement.md) to specify the character set for the external procedure it is declaring.</span></span> <span data-ttu-id="a847b-110">Questa condizione è illustrata nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="a847b-110">The following example illustrates this.</span></span>  
+- <span data-ttu-id="26e49-109">Usare ogni [Declare Statement](../language-reference/statements/declare-statement.md) per specificare il set di caratteri per la routine esterna che dichiara.</span><span class="sxs-lookup"><span data-stu-id="26e49-109">Use each [Declare Statement](../language-reference/statements/declare-statement.md) to specify the character set for the external procedure it is declaring.</span></span> <span data-ttu-id="26e49-110">Questa condizione è illustrata nell'esempio seguente.</span><span class="sxs-lookup"><span data-stu-id="26e49-110">The following example illustrates this.</span></span>  
   
     ```vb  
     Ansi Declare Function GetUserName Lib "advapi32.dll" _  
@@ -32,11 +32,11 @@ ms.locfileid: "71352166"
         (ByVal arg As Double)  
     ```  
   
-     <span data-ttu-id="a847b-111">Se non si specifica il set di caratteri nell'istruzione `Declare` , viene usato il set ANSI predefinito.</span><span class="sxs-lookup"><span data-stu-id="a847b-111">If you do not specify the character set in the `Declare` statement, it defaults to ANSI.</span></span>  
+     <span data-ttu-id="26e49-111">Se non si specifica il set di caratteri nell'istruzione `Declare` , viene usato il set ANSI predefinito.</span><span class="sxs-lookup"><span data-stu-id="26e49-111">If you do not specify the character set in the `Declare` statement, it defaults to ANSI.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a847b-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a847b-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="26e49-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="26e49-112">See also</span></span>
 
 - <xref:System.Runtime.InteropServices.DefaultCharSetAttribute>
 - <xref:System.Runtime.InteropServices.CharSet>
-- [<span data-ttu-id="a847b-113">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="a847b-113">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
-- [<span data-ttu-id="a847b-114">Istruzione Declare</span><span class="sxs-lookup"><span data-stu-id="a847b-114">Declare Statement</span></span>](../../visual-basic/language-reference/statements/declare-statement.md)
+- [<span data-ttu-id="26e49-113">Panoramica degli attributi</span><span class="sxs-lookup"><span data-stu-id="26e49-113">Attributes overview</span></span>](../programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="26e49-114">Declare Statement</span><span class="sxs-lookup"><span data-stu-id="26e49-114">Declare Statement</span></span>](../language-reference/statements/declare-statement.md)
