--- a/docs/visual-basic/misc/bc33017.md
+++ b/docs/visual-basic/misc/bc33017.md
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC33017
 ms.assetid: 5972d955-ce1d-4348-a021-167eecb3a507
-ms.openlocfilehash: ed2bb904625e2f61e12fb9c8ac1309371525756d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9a715706cc945bdca31ddb6a3a42841661995af3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626712"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385151"
 ---
-# <a name="conversion-operators-must-be-declared-either-widening-or-narrowing"></a><span data-ttu-id="ae0ae-102">Gli operatori di conversione devono essere dichiarati 'Widening' o 'Narrowing'</span><span class="sxs-lookup"><span data-stu-id="ae0ae-102">Conversion operators must be declared either 'Widening' or 'Narrowing'</span></span>
-<span data-ttu-id="ae0ae-103">[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) non specifica [Widening](../../visual-basic/language-reference/modifiers/widening.md) o [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md).</span><span class="sxs-lookup"><span data-stu-id="ae0ae-103">An [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) does not specify either [Widening](../../visual-basic/language-reference/modifiers/widening.md) or [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md).</span></span>  
+# <a name="conversion-operators-must-be-declared-either-widening-or-narrowing"></a><span data-ttu-id="b1c62-102">Gli operatori di conversione devono essere dichiarati 'Widening' o 'Narrowing'</span><span class="sxs-lookup"><span data-stu-id="b1c62-102">Conversion operators must be declared either 'Widening' or 'Narrowing'</span></span>
+<span data-ttu-id="b1c62-103">[Operator Statement](../language-reference/statements/operator-statement.md) non specifica [Widening](../language-reference/modifiers/widening.md) o [Narrowing](../language-reference/modifiers/narrowing.md).</span><span class="sxs-lookup"><span data-stu-id="b1c62-103">An [Operator Statement](../language-reference/statements/operator-statement.md) does not specify either [Widening](../language-reference/modifiers/widening.md) or [Narrowing](../language-reference/modifiers/narrowing.md).</span></span>  
   
- <span data-ttu-id="ae0ae-104">Quando si definisce un operatore di conversione, è necessario dichiararlo come `Widening` o `Narrowing`.</span><span class="sxs-lookup"><span data-stu-id="ae0ae-104">When you define a conversion operator, you must declare it as either `Widening` or `Narrowing`.</span></span> <span data-ttu-id="ae0ae-105">Queste caratteristiche si escludono a vicenda, quindi non è possibile specificarle entrambe.</span><span class="sxs-lookup"><span data-stu-id="ae0ae-105">These are mutually exclusive characteristics, so you cannot specify both.</span></span>  
+ <span data-ttu-id="b1c62-104">Quando si definisce un operatore di conversione, è necessario dichiararlo come `Widening` o `Narrowing`.</span><span class="sxs-lookup"><span data-stu-id="b1c62-104">When you define a conversion operator, you must declare it as either `Widening` or `Narrowing`.</span></span> <span data-ttu-id="b1c62-105">Queste caratteristiche si escludono a vicenda, quindi non è possibile specificarle entrambe.</span><span class="sxs-lookup"><span data-stu-id="b1c62-105">These are mutually exclusive characteristics, so you cannot specify both.</span></span>  
   
- <span data-ttu-id="ae0ae-106">**ID errore:** BC33017</span><span class="sxs-lookup"><span data-stu-id="ae0ae-106">**Error ID:** BC33017</span></span>  
+ <span data-ttu-id="b1c62-106">**ID errore:** BC33017</span><span class="sxs-lookup"><span data-stu-id="b1c62-106">**Error ID:** BC33017</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ae0ae-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ae0ae-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b1c62-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b1c62-107">To correct this error</span></span>  
   
-- <span data-ttu-id="ae0ae-108">Decidere se l'operatore di conversione deve essere `Widening` o `Narrowing`e includere la parola chiave appropriata nell'istruzione `Operator` .</span><span class="sxs-lookup"><span data-stu-id="ae0ae-108">Decide whether the conversion operator is to be `Widening` or `Narrowing`, and include the appropriate keyword in the `Operator` statement.</span></span> <span data-ttu-id="ae0ae-109">È necessario specificare una o l'altra.</span><span class="sxs-lookup"><span data-stu-id="ae0ae-109">You must specify one or the other.</span></span>  
+- <span data-ttu-id="b1c62-108">Decidere se l'operatore di conversione deve essere `Widening` o `Narrowing`e includere la parola chiave appropriata nell'istruzione `Operator` .</span><span class="sxs-lookup"><span data-stu-id="b1c62-108">Decide whether the conversion operator is to be `Widening` or `Narrowing`, and include the appropriate keyword in the `Operator` statement.</span></span> <span data-ttu-id="b1c62-109">È necessario specificare uno o l'altro.</span><span class="sxs-lookup"><span data-stu-id="b1c62-109">You must specify one or the other.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ae0ae-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ae0ae-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="b1c62-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b1c62-110">See also</span></span>
 
-- [<span data-ttu-id="ae0ae-111">Conversioni di ampliamento e restrizione</span><span class="sxs-lookup"><span data-stu-id="ae0ae-111">Widening and Narrowing Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
-- [<span data-ttu-id="ae0ae-112">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="ae0ae-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="ae0ae-113">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="ae0ae-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="ae0ae-114">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="ae0ae-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="ae0ae-115">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="ae0ae-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="b1c62-111">Widening and Narrowing Conversions</span><span class="sxs-lookup"><span data-stu-id="b1c62-111">Widening and Narrowing Conversions</span></span>](../programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [<span data-ttu-id="b1c62-112">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="b1c62-112">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="b1c62-113">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="b1c62-113">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="b1c62-114">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="b1c62-114">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="b1c62-115">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="b1c62-115">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
