commit translated contents

--- a/docs/visual-basic/misc/bc2006.md
+++ b/docs/visual-basic/misc/bc2006.md
@@ -1,5 +1,5 @@
 ---
-title: Opzione <optionname> richiede <argument>
+title: L'opzione <optionname> richiede<argument>
 ms.date: 07/20/2015
 f1_keywords:
 - vbc2006
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC2006
 ms.assetid: 36d7d25d-8da4-4b06-847f-f59b1d681224
-ms.openlocfilehash: b2bb918c6a883c9480177df36a0013925582c4de
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7db90c8e1613bc345c7575b46ac803ec64e39134
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64605377"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84367412"
 ---
-# <a name="option-optionname-requires-argument"></a>Opzione \<nomeopzione > richiede \<argomento >
+# <a name="option-optionname-requires-argument"></a>L'opzione \<optionname> richiede\<argument>
 Un argomento richiesto è stato omesso.  
   
  **ID errore:** BC2006  
@@ -25,4 +25,4 @@ Un argomento richiesto è stato omesso.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di errore](../../visual-basic/programming-guide/language-features/error-types.md)
+- [Tipi di errore](../programming-guide/language-features/error-types.md)
