--- a/docs/visual-basic/misc/bc30296.md
+++ b/docs/visual-basic/misc/bc30296.md
@@ -1,5 +1,5 @@
 ---
-title: L'interfaccia<interfacename>'' non può ereditare da se stessa:<message>
+title: "Un'interfaccia '<interfacename>' non può ereditare da se stessa: <message>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30296
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30296
 ms.assetid: a5bc1ae2-2083-4e26-b8a4-3c4dd951fd27
-ms.openlocfilehash: 4b76430f6573af01166f010932ce80d72b0a920c
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 5435f9345ee4e60c67e25059a39ec17ed3a41882
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667384"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84406249"
 ---
-# <a name="interface-interfacename-cannot-inherit-from-itself-message"></a>L'interfaccia\<' intervisiname >' non può ereditare \<da se stessa: Message >
-Un' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) nella definizione di un'interfaccia specifica la sua interfaccia personale.  
+# <a name="interface-interfacename-cannot-inherit-from-itself-message"></a>Un'interfaccia '\<interfacename>' non può ereditare da se stessa: \<message>
+Un' [Inherits Statement](../language-reference/statements/inherits-statement.md) nella definizione di un'interfaccia specifica la sua interfaccia personale.  
   
  Un'interfaccia può ereditare da un'altra interfaccia, che le fornisce tutti i membri dell'interfaccia dalla quale eredita, quindi non sarà necessario definire nuovamente tali membri. Un'interfaccia di questo tipo è detta *interfaccia derivata*e l'interfaccia da cui eredita è detta *interfaccia di base*.  
   
@@ -34,4 +34,4 @@ Un' [Inherits Statement](../../visual-basic/language-reference/statements/inheri
 ## <a name="see-also"></a>Vedere anche
 
 - [Nozioni fondamentali sull'ereditarietà (Visual Basic)](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [Interfacce](../../visual-basic/programming-guide/language-features/interfaces/index.md)
+- [Interfacce](../programming-guide/language-features/interfaces/index.md)
