--- a/docs/visual-basic/misc/bc30604.md
+++ b/docs/visual-basic/misc/bc30604.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30604
 ms.assetid: ce4759fe-5e49-43ad-8405-a3f46ed0a36f
-ms.openlocfilehash: 5e07e6cd85f22a24530aef886c4b0ac934cf2b89
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 53e934703a4f33ae8cfef58dc18849cadaa051d6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61759661"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389954"
 ---
 # <a name="statement-cannot-appear-within-an-interface-body-visual-basic-error"></a>L'istruzione non può trovarsi all'interno di un corpo di interfaccia (errore di Visual Basic)
 È stato rilevato un costrutto di linguaggio non previsto. Si presuppone che manchi un costrutto `End Interface` e che tutto il codice sorgente dopo questo punto si trovi all'esterno dell'interfaccia.  
@@ -27,5 +27,5 @@ ms.locfileid: "61759661"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Interfacce](../../visual-basic/programming-guide/language-features/interfaces/index.md)
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
+- [Interfacce](../programming-guide/language-features/interfaces/index.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
