--- a/docs/visual-basic/misc/bc31100.md
+++ b/docs/visual-basic/misc/bc31100.md
@@ -1,5 +1,5 @@
 ---
-title: Modificatore di accesso '<accessmodifier>' non è valido
+title: Il modificatore di accesso '<accessmodifier>' non è valido
 ms.date: 07/20/2015
 f1_keywords:
 - bc31100
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC31100
 ms.assetid: 1cd71acc-0b54-4f64-8d61-75b272d293cb
-ms.openlocfilehash: 5f58ddd5b2b5a9d4963af07cde7c973c4979bd15
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: d1de83274bcc735d9dc3abcff2b77833886d9242
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64644174"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84399384"
 ---
-# <a name="access-modifier-accessmodifier-is-not-valid"></a>Modificatore di accesso '\<modificatoreaccesso >' non è valido
-Oggetto [l'istruzione Get](../../visual-basic/language-reference/statements/get-statement.md) oppure [istruzione Set](../../visual-basic/language-reference/statements/set-statement.md) specifica un livello di accesso meno restrittivo rispetto a quelli specificati per la proprietà che lo contiene.  
+# <a name="access-modifier-accessmodifier-is-not-valid"></a>Il modificatore di accesso '\<accessmodifier>' non è valido
+Un' [istruzione Get](../language-reference/statements/get-statement.md) o un' [istruzione set](../language-reference/statements/set-statement.md) specifica un livello di accesso meno restrittivo rispetto a quello specificato per la proprietà che lo contiene.  
   
  È sempre possibile specificare un livello di accesso per la proprietà. Inoltre, è possibile specificare un livello di accesso diverso al massimo per una delle routine della proprietà (`Get` o `Set`), sempre che sia più restrittiva rispetto al livello di accesso della proprietà. Ad esempio, se la proprietà è `Friend`, è possibile specificare `Private` per una routine della proprietà, ma non `Public`. Non è possibile specificare livelli di accesso per entrambe le routine della proprietà.  
   
@@ -25,9 +25,9 @@ Oggetto [l'istruzione Get](../../visual-basic/language-reference/statements/get-
   
 - Specificare un livello di accesso per la routine della proprietà più restrittivo di quello specificato per la proprietà o rimuovere il modificatore di accesso.  
   
-- Dichiarare il livello di accesso meno restrittivo nell' [Property Statement](../../visual-basic/language-reference/statements/property-statement.md)e quello più restrittivo in una delle routine della proprietà.  
+- Dichiarare il livello di accesso meno restrittivo nell' [Property Statement](../language-reference/statements/property-statement.md)e quello più restrittivo in una delle routine della proprietà.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
-- [Procedura: Dichiarare una proprietà con livelli di accesso misti](../../visual-basic/programming-guide/language-features/procedures/how-to-declare-a-property-with-mixed-access-levels.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
+- [Procedura: dichiarare una proprietà con livelli di accesso misti](../programming-guide/language-features/procedures/how-to-declare-a-property-with-mixed-access-levels.md)
