--- a/docs/visual-basic/misc/bc32055.md
+++ b/docs/visual-basic/misc/bc32055.md
@@ -1,5 +1,5 @@
 ---
-title: Il tipo<typename>'' non può ereditare da un parametro di tipo
+title: Il typo '<typename>' non può ereditare da un parametro di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc32055
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32055
 ms.assetid: 97af7cad-6e40-41e3-892d-1fbcbd86356d
-ms.openlocfilehash: 11a8963d413ce75b2d2a60aa30e58ab87f985314
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 8953bb1d948f6e0025bc9be0e2f6b669d065a420
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69667527"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84411996"
 ---
-# <a name="type-typename-cannot-inherit-from-a-type-parameter"></a>Il tipo\<' typeName >' non può ereditare da un parametro di tipo
-Una classe o interfaccia include un' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) che specifica un parametro di tipo generico.  
+# <a name="type-typename-cannot-inherit-from-a-type-parameter"></a>Il typo '\<typename>' non può ereditare da un parametro di tipo
+Una classe o interfaccia include un' [Inherits Statement](../language-reference/statements/inherits-statement.md) che specifica un parametro di tipo generico.  
   
  Un tipo non può ereditare da un tipo non ancora definito. L'ereditarietà presuppone la capacità di riutilizzare membri della classe base, che a sua volta richiede la definizione di questi membri. Un parametro di tipo generico è un segnaposto che dovrà essere sostituito da un tipo specifico fornito da un argomento di tipo. Di conseguenza, un tipo non può ereditare dal segnaposto.  
   
@@ -25,9 +25,9 @@ Una classe o interfaccia include un' [Inherits Statement](../../visual-basic/lan
   
 - Se il tipo che eredita deve ereditare da un altro tipo, usare un tipo specifico invece di un parametro di tipo.  
   
-- Se il tipo di base deve essere rappresentato da un parametro di tipo generico, nessun altro tipo riuscirà a ereditare da esso. Rimuovere l' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md).  
+- Se il tipo di base deve essere rappresentato da un parametro di tipo generico, nessun altro tipo riuscirà a ereditare da esso. Rimuovere l' [Inherits Statement](../language-reference/statements/inherits-statement.md).  
   
 ## <a name="see-also"></a>Vedere anche
 
 - [Nozioni fondamentali sull'ereditarietà (Visual Basic)](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
