--- a/docs/visual-basic/misc/bc32076.md
+++ b/docs/visual-basic/misc/bc32076.md
@@ -1,5 +1,5 @@
 ---
-title: "'<typename>' è un tipo generico e richiede argomenti tipo"
+title: "' <typename> ' è un tipo generico e richiede argomenti di tipo"
 ms.date: 07/20/2015
 f1_keywords:
 - BC32076
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32076
 ms.assetid: 57f63727-c544-4012-8f03-5d77fbdd1135
-ms.openlocfilehash: d966650df9626980afbf2dc3f6071a037d815606
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 128e4f4660443b09a3504fa4b528d64257d973ff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913057"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413713"
 ---
-# <a name="typename-is-a-generic-type-and-requires-type-arguments"></a>'\<nomeTipo >' è un tipo generico e richiede argomenti tipo
+# <a name="typename-is-a-generic-type-and-requires-type-arguments"></a>' \<typename> ' è un tipo generico e richiede argomenti di tipo
 Una variabile, un parametro di routine o il valore restituito da una funzione è dichiarato come avente il tipo di una classe o una struttura generica, ma la dichiarazione non fornisce alcun argomento di tipo.  
   
  Ogni classe e struttura generica è definita per sua natura con almeno un parametro di tipo. Quando si usa un tipo generico per dichiarare una classe o una struttura costruita, è necessario fornire un argomento di tipo per ogni parametro di tipo definito dal tipo generico.  
@@ -27,6 +27,6 @@ Una variabile, un parametro di routine o il valore restituito da una funzione è
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Of](../../visual-basic/language-reference/statements/of-clause.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Di](../language-reference/statements/of-clause.md)
+- [Type List](../language-reference/statements/type-list.md)
