--- a/docs/visual-basic/misc/bc32303.md
+++ b/docs/visual-basic/misc/bc32303.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32303
 ms.assetid: eed6a16e-4a44-4f72-b1de-d4212940da37
-ms.openlocfilehash: 861488b2349baf2766c985c71bfb1b4aa65e108d
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1fd88ec1adcd4a9e07c1ee43f032cd3e33f541dc
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64593128"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385964"
 ---
 # <a name="illegal-call-expression-or-index-expression"></a>L'espressione per la chiamata o l'indice non è valida
 Un valore tra parentesi segue un'espressione che non è una routine, una proprietà o una matrice.  
@@ -31,8 +31,8 @@ Un valore tra parentesi segue un'espressione che non è una routine, una proprie
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Chiamare una routine che restituisce un valore](../../visual-basic/programming-guide/language-features/procedures/how-to-call-a-procedure-that-returns-a-value.md)
-- [Procedura: Chiamare una routine che non restituisce un valore](../../visual-basic/programming-guide/language-features/procedures/how-to-call-a-procedure-that-does-not-return-a-value.md)
+- [Procedura: chiamare una routine che restituisce un valore](../programming-guide/language-features/procedures/how-to-call-a-procedure-that-returns-a-value.md)
+- [Procedura: chiamare una routine che non restituisce un valore](../programming-guide/language-features/procedures/how-to-call-a-procedure-that-does-not-return-a-value.md)
 
-- [Procedura: Inserire un valore in una proprietà](../../visual-basic/programming-guide/language-features/procedures/how-to-put-a-value-in-a-property.md)
-- [Procedura: Ottenere un valore da una proprietà](../../visual-basic/programming-guide/language-features/procedures/how-to-get-a-value-from-a-property.md)
+- [Procedura: inserire un valore in una proprietà](../programming-guide/language-features/procedures/how-to-put-a-value-in-a-property.md)
+- [Procedura: ottenere un valore da una proprietà](../programming-guide/language-features/procedures/how-to-get-a-value-from-a-property.md)
