--- a/docs/visual-basic/misc/bc33006.md
+++ b/docs/visual-basic/misc/bc33006.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33006
 ms.assetid: 20d3c843-e60c-4528-b737-0a97691f2153
-ms.openlocfilehash: f5d925e259f0550331db5d929a69f72ae90d8730
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: e93a519186da3e009ee66dd568d5d349d2db79b8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64648883"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385418"
 ---
 # <a name="end-operator-must-be-the-first-statement-on-a-line"></a>'End Operator' deve essere la prima istruzione in una riga
 Un'istruzione `End Operator` segue un separatore di istruzioni due punti (`:`). `End Operator` deve essere l'unica istruzione nella riga di origine.  
@@ -25,7 +25,7 @@ Un'istruzione `End Operator` segue un separatore di istruzioni due punti (`:`). 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Procedura: Interrompere e combinare istruzioni nel codice](../../visual-basic/programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)
-- [Istruzione Operator](../../visual-basic/language-reference/statements/operator-statement.md)
-- [Procedura: Definire un operatore](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [Procedura: Definire un operatore di conversione](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [Procedura: Interrompere e combinare istruzioni nel codice](../programming-guide/program-structure/how-to-break-and-combine-statements-in-code.md)
+- [Operator Statement](../language-reference/statements/operator-statement.md)
+- [Procedura: definire un operatore](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [Procedura: Definire un operatore di conversione](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
