--- a/docs/visual-basic/misc/bc40020.md
+++ b/docs/visual-basic/misc/bc40020.md
@@ -1,5 +1,5 @@
 ---
-title: «<keyword>'della funzione di accesso di'<propertyname>' è obsoleto (avviso di Visual Basic)
+title: <keyword>la funzione di accesso '' di ' <propertyname> ' è obsoleta (Visual Basic avviso)
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40020
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC40020
 ms.assetid: 005440f4-6e82-421c-b2ce-9c5139325bac
-ms.openlocfilehash: 2f7dfcba4f85f0925911c1a03cd1d4b1220f769d
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: a39723b4893efb7e90dfe4087841d00b7e0648b5
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61794368"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384417"
 ---
-# <a name="keyword-accessor-of-propertyname-is-obsolete-visual-basic-warning"></a>«\<parola chiave >' della funzione di accesso di '\<NomeProprietà >' è obsoleto (avviso di Visual Basic)
+# <a name="keyword-accessor-of-propertyname-is-obsolete-visual-basic-warning"></a>\<keyword>la funzione di accesso '' di ' \<propertyname> ' è obsoleta (Visual Basic avviso)
 Un'istruzione prova a leggere o scrivere una proprietà per cui la routine corrispondente è stata contrassegnata con l'attributo <xref:System.ObsoleteAttribute> e la direttiva di considerarla come un avviso.  
   
  È possibile contrassegnare qualsiasi elemento di programmazione come non più in uso applicando <xref:System.ObsoleteAttribute> a tale elemento. In questo caso, è possibile impostare la proprietà <xref:System.ObsoleteAttribute.IsError%2A> dell'attributo su `True` o `False`. Se si imposta la proprietà su `True`, il compilatore considera il tentativo di usare l'elemento come un errore. Se si imposta la proprietà su `False`, o si lascia l'impostazione predefinita `False`, il compilatore genera un avviso se si prova a usare l'elemento.  
@@ -31,4 +31,4 @@ Un'istruzione prova a leggere o scrivere una proprietà per cui la routine corri
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Routine Property](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+- [Routine Property](../programming-guide/language-features/procedures/property-procedures.md)
