--- a/docs/visual-basic/misc/bc42036.md
+++ b/docs/visual-basic/misc/bc42036.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC42036
 ms.assetid: f11e9c9f-aa66-4eb1-8f49-abf713bef885
-ms.openlocfilehash: f7129b4d2195543af58a7bb85ba62b725cef374e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 593c0e5c3f68b312cf8ce3ccbddb090047c8b258
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64589525"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395233"
 ---
 # <a name="operands-of-type-object-used-in-expressions-for-select-case-statements-runtime-errors-could-occur"></a>Operandi di tipo Object usati in espressioni per istruzioni 'Select' e 'Case'; potrebbero verificarsi errori in fase di esecuzione
-Una costruzione `Select`...`Case` usa una o più espressioni del [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).  
+Una costruzione `Select`...`Case` usa una o più espressioni del [Object Data Type](../language-reference/data-types/object-data-type.md).  
   
  Quando una variabile o espressione restituisce `Object`, il compilatore deve eseguire un' *associazione tardiva*, che comporta l'esecuzione di operazioni supplementari in fase di esecuzione. Espone inoltre l'applicazione a possibili errori di runtime. Se ad esempio si assegna un oggetto <xref:System.Windows.Forms.Form> a una variabile `Object` e quindi si prova a confrontarla con un numero, viene generata un'eccezione <xref:System.InvalidCastException> perché Visual Basic non supporta la conversione di un oggetto <xref:System.Windows.Forms.Form> in un valore numerico.  
   
@@ -31,6 +31,6 @@ Una costruzione `Select`...`Case` usa una o più espressioni del [Object Data Ty
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Select...Case](../../visual-basic/language-reference/statements/select-case-statement.md)
-- [Operatori aritmetici in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
-- [Operatori di confronto in Visual Basic](../../visual-basic/programming-guide/language-features/operators-and-expressions/comparison-operators.md)
+- [Istruzione Select...Case](../language-reference/statements/select-case-statement.md)
+- [Operatori aritmetici in Visual Basic](../programming-guide/language-features/operators-and-expressions/arithmetic-operators.md)
+- [Comparison Operators in Visual Basic](../programming-guide/language-features/operators-and-expressions/comparison-operators.md)
