--- a/docs/visual-basic/misc/bc30211.md
+++ b/docs/visual-basic/misc/bc30211.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30211
 ms.assetid: 855795ce-8499-4525-a1de-cbb8ba364cd7
-ms.openlocfilehash: 60d6f846e76704f3a9f00a6c99d6d391bff73be6
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 57d1b5bb6ffc081c2cea6a75e08a4624576739a7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64615027"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84409179"
 ---
 # <a name="option-strict-on-requires-that-all-method-parameters-have-an-as-clause"></a>Option Strict On richiede che tutti i parametri dei metodi abbiano una clausola 'As'
 Un metodo contiene un parametro senza una clausola `As` . Quando `Option Strict` è On, ogni variabile, proprietà, argomento di routine e funzione deve essere dichiarata con una clausola `As` per specificare il tipo di dati, ad esempio `Sub GetData(ByVal filter As String)`.  
@@ -27,6 +27,6 @@ Un metodo contiene un parametro senza una clausola `As` . Quando `Option Strict`
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Option Strict](../../visual-basic/language-reference/statements/option-strict-statement.md)
-- [Istruzione Sub](../../visual-basic/language-reference/statements/sub-statement.md)
-- [Istruzione Function](../../visual-basic/language-reference/statements/function-statement.md)
+- [Option Strict Statement](../language-reference/statements/option-strict-statement.md)
+- [Istruzione Sub](../language-reference/statements/sub-statement.md)
+- [Istruzione Function](../language-reference/statements/function-statement.md)
