--- a/docs/visual-basic/misc/bc30607.md
+++ b/docs/visual-basic/misc/bc30607.md
@@ -1,5 +1,5 @@
 ---
-title: Le classi ' NotInheritable ' non possono avere membri<specifiername>dichiarati ''
+title: Le classi ' NotInheritable ' non possono avere membri dichiarati ' <specifiername> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30607
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30607
 ms.assetid: c800e24e-d055-402f-b378-6d2f4041ff16
-ms.openlocfilehash: 1eb16f56d8ac8e5604e6aa50095d184948228657
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: f0a3963372f39d9748b2df7169d290a6275efeeb
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664884"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84389941"
 ---
-# <a name="notinheritable-classes-cannot-have-members-declared-specifiername"></a>Le classi ' NotInheritable ' non possono avere membri\<dichiarati come ' specifiname >'
+# <a name="notinheritable-classes-cannot-have-members-declared-specifiername"></a>Le classi ' NotInheritable ' non possono avere membri dichiarati ' \<specifiername> '
 Non è possibile usare gli identificatori di override con classi `NotInheritable` perché non è possibile eseguire l'override dei membri corrispondenti.  
   
  **ID errore:** BC30607  
@@ -25,7 +25,7 @@ Non è possibile usare gli identificatori di override con classi `NotInheritable
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overridable](../../visual-basic/language-reference/modifiers/overridable.md)
-- [NotOverridable](../../visual-basic/language-reference/modifiers/notoverridable.md)
-- [MustOverride](../../visual-basic/language-reference/modifiers/mustoverride.md)
+- [Overridable](../language-reference/modifiers/overridable.md)
+- [NotOverridable](../language-reference/modifiers/notoverridable.md)
+- [MustOverride](../language-reference/modifiers/mustoverride.md)
 - [Override di proprietà e metodi nelle classi derivate](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
