--- a/docs/visual-basic/misc/bc30625.md
+++ b/docs/visual-basic/misc/bc30625.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30625
 ms.assetid: d51d5f1c-16f5-401c-be3a-0470eb9bb812
-ms.openlocfilehash: 007f8fd6658e61240f28f7150ac5380630d70743
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4fe82551a2bf9006b138b9aae116d77ae0d002b0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646700"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84401160"
 ---
 # <a name="module-statement-must-end-with-a-matching-end-module"></a>L'istruzione 'Module' deve terminare con un oggetto 'End Module' corrispondente
 I blocchi del modulo devono terminare con un'istruzione `End Module` .  
@@ -25,4 +25,4 @@ I blocchi del modulo devono terminare con un'istruzione `End Module` .
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Fine \<parola chiave > istruzione](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+- [\<keyword>Istruzione End](../language-reference/statements/end-keyword-statement.md)
