--- a/docs/visual-basic/misc/bc30731.md
+++ b/docs/visual-basic/misc/bc30731.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30731
 ms.assetid: b4fba871-4016-43ff-b072-9826cc9a3ac3
-ms.openlocfilehash: bd8c50285a0347865b78971a09b9fe26271da3e7
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: 794579c462bcded5caa626cf1309f21a79ed45d7
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73196759"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405976"
 ---
 # <a name="addressof-expressions-are-not-valid-in-debug-windows"></a>Le espressioni 'AddressOf' non sono valide nelle finestre di debug
 Le istruzioni`AddressOf` possono essere usate solo nel codice sorgente.  
@@ -25,5 +25,5 @@ Le istruzioni`AddressOf` possono essere usate solo nel codice sorgente.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore AddressOf](../../visual-basic/language-reference/operators/addressof-operator.md)
+- [Operatore AddressOf](../language-reference/operators/addressof-operator.md)
 - [Debug in Visual Studio](/visualstudio/debugger/debugger-feature-tour)
