--- a/docs/visual-basic/misc/bc31132.md
+++ b/docs/visual-basic/misc/bc31132.md
@@ -1,5 +1,5 @@
 ---
-title: Definizione di 'RaiseEvent' mancante per l'evento '<eventname>'
+title: Manca la definizione di ' RaiseEvent ' per l'evento ' <eventname> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc31132
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31132
 ms.assetid: 8f3442fd-2ed1-4dbc-83a8-f0860ec022ac
-ms.openlocfilehash: e784e03833ad1d21983d7a899e35b0a2d1ee3acd
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: eaaf4fdde0071da46725b1b668f21b15a1d2cdb0
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61712436"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84366008"
 ---
-# <a name="raiseevent-definition-missing-for-event-eventname"></a>Definizione di 'RaiseEvent' mancante per l'evento '\<NomeEvento >'
+# <a name="raiseevent-definition-missing-for-event-eventname"></a>Manca la definizione di ' RaiseEvent ' per l'evento ' \<eventname> '
 Se un evento viene dichiarato come `Custom`, deve fornire una routine per la generazione dell'evento.  
   
  **ID errore:** BC31132  
@@ -27,5 +27,5 @@ Se un evento viene dichiarato come `Custom`, deve fornire una routine per la gen
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione RaiseEvent](../../visual-basic/language-reference/statements/raiseevent-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione RaiseEvent](../language-reference/statements/raiseevent-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
