--- a/docs/visual-basic/misc/bc31187.md
+++ b/docs/visual-basic/misc/bc31187.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31187
 ms.assetid: 64c6a033-7cdc-48a0-bff0-bdd045cb13ad
-ms.openlocfilehash: f7f2577696ac71654f880d08f4815577073dacfc
-ms.sourcegitcommit: 8a0fe8a2227af612f8b8941bdb8b19d6268748e7
+ms.openlocfilehash: b9be41af0c2afefa14afc38a1f2f31c39bdb0ea6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/03/2019
-ms.locfileid: "71835212"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84405378"
 ---
 # <a name="namespace-declaration-must-start-with-xmlns"></a>La dichiarazione dello spazio dei nomi deve iniziare con 'xmlns'
 Un spazio dei nomi XML è stato specificato senza l'identificatore `xmlns` obbligatorio. L'identificatore `xmlns` deve contenere solo caratteri minuscoli.  
@@ -29,6 +29,6 @@ Imports <xmlns:ns="http://SampleNamespace">
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Imports (spazio dei nomi XML)](../../visual-basic/language-reference/statements/imports-statement-xml-namespace.md)
-- [Valori letterali XML](../../visual-basic/language-reference/xml-literals/index.md)
-- [XML](../../visual-basic/programming-guide/language-features/xml/index.md)
+- [Istruzione Imports (spazio dei nomi XML)](../language-reference/statements/imports-statement-xml-namespace.md)
+- [Valori letterali XML](../language-reference/xml-literals/index.md)
+- [XML](../programming-guide/language-features/xml/index.md)
