--- a/docs/visual-basic/misc/bc36662.md
+++ b/docs/visual-basic/misc/bc36662.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non consente la riduzione in conversioni implicite tra l'espressione lambda e il delegato '<delegatename>'
+title: Option Strict On non consente la riduzione in conversioni implicite di tipi tra l'espressione lambda e il delegato ' <delegatename> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc36662
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC36662
 ms.assetid: 4504497b-56ba-4631-ad7b-59975f7fee04
-ms.openlocfilehash: b14f09cf08c665ed3c4453f2a30928371f78b508
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 275cc7029233963a5295f50c90b825ea0931b008
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912728"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385132"
 ---
-# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-the-lambda-expression-and-delegate-delegatename"></a>Option Strict On non consente la riduzione in conversioni implicite tra l'espressione lambda e il delegato '\<NomeDelegato >'
+# <a name="option-strict-on-does-not-allow-narrowing-in-implicit-type-conversions-between-the-lambda-expression-and-delegate-delegatename"></a>Option Strict On non consente la riduzione in conversioni implicite di tipi tra l'espressione lambda e il delegato ' \<delegatename> '
 Con `Option Strict` non è possibile avere una conversione verso un tipo di dati più piccolo tra il tipo di dati di un parametro in un delegato e il corrispondente parametro di un'espressione lambda assegnata a una variabile di quel tipo di delegato. Nel codice seguente, ad esempio, il delegato `Del` ha un parametro di tipo `Integer`.  
   
 ```vb  
@@ -46,7 +46,7 @@ Dim example4 As Del = Function(n) "Valid"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Espressioni lambda](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
-- [Delegati](../../visual-basic/programming-guide/language-features/delegates/index.md)
-- [Conversioni di ampliamento e restrizione](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
-- [Conversione di tipo relaxed del delegato](../../visual-basic/programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
+- [Espressioni lambda](../programming-guide/language-features/procedures/lambda-expressions.md)
+- [Delegati](../programming-guide/language-features/delegates/index.md)
+- [Widening and Narrowing Conversions](../programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [Conversione di tipo relaxed del delegato](../programming-guide/language-features/delegates/relaxed-delegate-conversion.md)
