--- a/docs/visual-basic/misc/bc42020.md
+++ b/docs/visual-basic/misc/bc42020.md
@@ -7,17 +7,17 @@ f1_keywords:
 helpviewer_keywords:
 - BC42020
 ms.assetid: 9422b16d-39b5-4d49-b697-608226ccafea
-ms.openlocfilehash: 74b478f13558aaf2ac6f6dfc8c7ad07efa3b53ee
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 6cc39f023174f60f771abe4c365cbeb6f2ff7d42
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913101"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84395715"
 ---
 # <a name="variable-declaration-without-an-as-clause-type-of-object-assumed"></a>Dichiarazione di variabile senza una clausola 'As'. Verrà usato il tipo Object
 Una dichiarazione di variabile non specifica una clausola `As` .  
   
- Una clausola `As` identifica un tipo di dati da associare a un elemento di programmazione. In un [istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md), specifica il tipo di dati della variabile o variabili. Se non si include una clausola `As` nell'istruzione `Dim` , il tipo di dati della variabile sarà `Object`.  
+ Una clausola `As` identifica un tipo di dati da associare a un elemento di programmazione. In un' [istruzione Dim](../language-reference/statements/dim-statement.md)specifica il tipo di dati della variabile o delle variabili. Se non si include una clausola `As` nell'istruzione `Dim` , il tipo di dati della variabile sarà `Object`.  
   
  Per impostazione predefinita, si tratta di un messaggio di avviso. Per informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).  
   
@@ -29,5 +29,5 @@ Una dichiarazione di variabile non specifica una clausola `As` .
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Dim](../../visual-basic/language-reference/statements/dim-statement.md)
-- [Dichiarazione di variabile](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+- [Istruzione Dim](../language-reference/statements/dim-statement.md)
+- [Dichiarazione di variabile](../programming-guide/language-features/variables/variable-declaration.md)
